--- a/directbak.yaml
+++ b/directbak.yaml
@@ -655,7 +655,6 @@ payload:
   - '+.0951job.com'
   - '+.09635.com'
   - '+.0967ll.com'
-  - '+.09685.com'
   - '+.096hg.com'
   - '+.0991dj.com'
   - '+.0991net.com'
@@ -3797,7 +3796,6 @@ payload:
   - '+.5153.com'
   - '+.51555.net'
   - '+.51569.com'
-  - '+.5156edu.com'
   - '+.5156rcw.com'
   - '+.515app.com'
   - '+.515car.com'
@@ -5683,6 +5681,7 @@ payload:
   - '+.71acg.net'
   - '+.71baomu.com'
   - '+.71baomu.net'
+  - '+.71big.net'
   - '+.71dm.com'
   - '+.71du.com'
   - '+.71e.com'
@@ -11754,6 +11753,7 @@ payload:
   - '+.bobopos.com'
   - '+.bobouny.com'
   - '+.bobtj.com'
+  - '+.bobtranslate.com'
   - '+.bocaidaka.com'
   - '+.boce.com'
   - '+.bocep2c.com'
@@ -13291,7 +13291,6 @@ payload:
   - '+.cdnmama.com'
   - '+.cdnmaster.com'
   - '+.cdnok.com'
-  - '+.cdnpan.com'
   - '+.cdnpe.com'
   - '+.cdnsvc.com'
   - '+.cdntip.com'
@@ -18129,7 +18128,6 @@ payload:
   - '+.ddnddn.com'
   - '+.ddnode.com'
   - '+.ddns-only.xyz'
-  - '+.ddns.tokyo'
   - '+.ddnsto.com'
   - '+.ddong.com'
   - '+.ddooo.com'
@@ -24228,7 +24226,6 @@ payload:
   - '+.glosku.com'
   - '+.glqh.com'
   - '+.glshimg.com'
-  - '+.gltattoo.com'
   - '+.gltjk.com'
   - '+.gltop.com'
   - '+.glvs.com'
@@ -24850,7 +24847,6 @@ payload:
   - '+.guaili.org'
   - '+.guailuo.com'
   - '+.guailuzi.com'
-  - '+.guainiuwang.com'
   - '+.guaiwola.com'
   - '+.guaixun.com'
   - '+.guajibao.club'
@@ -25413,7 +25409,6 @@ payload:
   - '+.gzstv.com'
   - '+.gzsuiti.com'
   - '+.gzsums.net'
-  - '+.gzsww.com'
   - '+.gzsy06.com'
   - '+.gzsy07.com'
   - '+.gzszgas.com'
@@ -26992,7 +26987,6 @@ payload:
   - '+.hhvv.com'
   - '+.hhxdkj.com'
   - '+.hhxin.com'
-  - '+.hhycdai.com'
   - '+.hhycdk.com'
   - '+.hhygame.com'
   - '+.hhygames.com'
@@ -27744,6 +27738,7 @@ payload:
   - '+.houdask.com'
   - '+.houdunwang.com'
   - '+.houge.biz'
+  - '+.houjt.com'
   - '+.houkai.com'
   - '+.houpuwang.com'
   - '+.houqinbao.com'
@@ -29100,7 +29095,6 @@ payload:
   - '+.i-size.com'
   - '+.i-study.net'
   - '+.i-tongfang.com'
-  - '+.i-tv.com'
   - '+.i-xinnuo.com'
   - '+.i-xoron.com'
   - '+.i.dell.com'
@@ -31164,7 +31158,6 @@ payload:
   - '+.iyunyue.com'
   - '+.iyunzk.com'
   - '+.iyuxy.com'
-  - '+.iyx668.com'
   - '+.iyxku.com'
   - '+.iyyin.com'
   - '+.iyz168.com'
@@ -31560,6 +31553,7 @@ payload:
   - '+.jggjj.com'
   - '+.jgjapp.com'
   - '+.jgjh.com'
+  - '+.jgjsoft.com'
   - '+.jgscct.com'
   - '+.jgsdaily.com'
   - '+.jgshwx.com'
@@ -33585,6 +33579,7 @@ payload:
   - '+.jzant.com'
   - '+.jzb.com'
   - '+.jzbar.net'
+  - '+.jzbbc.com'
   - '+.jzbdc.com'
   - '+.jzcbank.com'
   - '+.jzchou.com'
@@ -34166,6 +34161,7 @@ payload:
   - '+.keyray-hk.com'
   - '+.keyshot.cc'
   - '+.keyuhome.com'
+  - '+.keyunidc.com'
   - '+.keyunsoft.com'
   - '+.keyyou.net'
   - '+.kezhaozhao.com'
@@ -34680,6 +34676,7 @@ payload:
   - '+.ksense.com'
   - '+.ksfang.com'
   - '+.ksgnr.com'
+  - '+.kshhl.com'
   - '+.kshot.com'
   - '+.ksjgs.com'
   - '+.ksks001.com'
@@ -36125,7 +36122,6 @@ payload:
   - '+.liba.com'
   - '+.libaclub.com'
   - '+.libai.com'
-  - '+.liball.me'
   - '+.libaopay.com'
   - '+.libaoyun.com'
   - '+.libinx.com'
@@ -36923,6 +36919,7 @@ payload:
   - '+.logdu.com'
   - '+.loghao.com'
   - '+.logi-inno.com'
+  - '+.logi.im'
   - '+.logicdsp.com'
   - '+.login.cdnetworks.com'
   - '+.logo-emblem.com'
@@ -39936,6 +39933,7 @@ payload:
   - '+.mtcop.com'
   - '+.mtcsys.com'
   - '+.mtcx99.com'
+  - '+.mtdpai.com'
   - '+.mtdpgame.com'
   - '+.mtdx.net'
   - '+.mtedu.com'
@@ -44378,6 +44376,7 @@ payload:
   - '+.qijizuopin.com'
   - '+.qijoe.com'
   - '+.qijuan.com'
+  - '+.qijucn.com'
   - '+.qik339.com'
   - '+.qikan.com'
   - '+.qikanol.com'
@@ -44734,7 +44733,6 @@ payload:
   - '+.qjhm.net'
   - '+.qji.cc'
   - '+.qjimage.com'
-  - '+.qjishu.com'
   - '+.qjkc.net'
   - '+.qjmotor.com'
   - '+.qjrc.com'
@@ -46951,6 +46949,7 @@ payload:
   - '+.sdj-tech.com'
   - '+.sdjcw.com'
   - '+.sdjinlan.com'
+  - '+.sdjjdt.com'
   - '+.sdjnwx.com'
   - '+.sdjtcx.com'
   - '+.sdjushu.com'
@@ -47961,6 +47960,7 @@ payload:
   - '+.shitac.com'
   - '+.shitianxia.vip'
   - '+.shitibaodian.com'
+  - '+.shitoc.com'
   - '+.shitongaf.com'
   - '+.shitou.com'
   - '+.shitouboy.com'
@@ -48785,7 +48785,6 @@ payload:
   - '+.siwazyw.cc'
   - '+.siwazyw.tv'
   - '+.siwazyw.xyz'
-  - '+.siwazywcdn.com'
   - '+.siwazywcdn2.com'
   - '+.siwazywimg.com'
   - '+.siwei.me'
@@ -48821,7 +48820,6 @@ payload:
   - '+.sj35hb.com'
   - '+.sj3w.com'
   - '+.sj88.com'
-  - '+.sj96615.com'
   - '+.sj998.com'
   - '+.sjawards.com'
   - '+.sjbzx.com'
@@ -49437,6 +49435,7 @@ payload:
   - '+.sopandas.com'
   - '+.sopanxia.com'
   - '+.soperson.com'
+  - '+.sophiatiles.com'
   - '+.soppt.com'
   - '+.sopuning.com'
   - '+.soq.com'
@@ -50983,6 +50982,7 @@ payload:
   - '+.taisantech.com'
   - '+.taishangshiwu.com'
   - '+.taishengtoys.com'
+  - '+.taitongdaikuan.com'
   - '+.taiwandao.tw'
   - '+.taixingren.com'
   - '+.taixsw.com'
@@ -52147,6 +52147,7 @@ payload:
   - '+.tjst.net'
   - '+.tjstats.com'
   - '+.tjtele.com'
+  - '+.tjtusuguan.com'
   - '+.tjtzkj.com'
   - '+.tjufbase.com'
   - '+.tjupdi.com'
@@ -59965,7 +59966,6 @@ payload:
   - '+.xxcang.com'
   - '+.xxcig.com'
   - '+.xxcmw.com'
-  - '+.xxd.io'
   - '+.xxdao.com'
   - '+.xxfzl.com'
   - '+.xxghh.biz'
@@ -61434,6 +61434,7 @@ payload:
   - '+.yjk.im'
   - '+.yjldp.com'
   - '+.yjlin4.com'
+  - '+.yjnbn.com'
   - '+.yjopen.com'
   - '+.yjpal.com'
   - '+.yjq.cc'
@@ -62681,6 +62682,7 @@ payload:
   - '+.yunnut.com'
   - '+.yunos-tv.com'
   - '+.yunos.com'
+  - '+.yunpaiwang.net'
   - '+.yunpan.com'
   - '+.yunpansou.cc'
   - '+.yunpanx.com'
@@ -63993,6 +63995,7 @@ payload:
   - '+.zhgjm.com'
   - '+.zhgl.com'
   - '+.zhgnj.com'
+  - '+.zhgqt.com'
   - '+.zhguoguo.com'
   - '+.zhh.me'
   - '+.zhhainiao.com'
