--- a/directbak.yaml
+++ b/directbak.yaml
@@ -400,7 +400,6 @@ payload:
   - '+.0554zp.com'
   - '+.0555dsw.com'
   - '+.0555fc.com'
-  - '+.0558.la'
   - '+.0558zp.com'
   - '+.0559fc.com'
   - '+.0561house.com'
@@ -1177,7 +1176,6 @@ payload:
   - '+.127xx.com'
   - '+.128456.com'
   - '+.1288.tv'
-  - '+.128ic.com'
   - '+.128qd.com'
   - '+.128uu.com'
   - '+.12988.net'
@@ -3478,6 +3476,7 @@ payload:
   - '+.404mzk.com'
   - '+.404v.com'
   - '+.404wan.com'
+  - '+.404youxi.com'
   - '+.405400.com'
   - '+.406yx.com'
   - '+.407wan.com'
@@ -3757,7 +3756,6 @@ payload:
   - '+.5100.net'
   - '+.510560.com'
   - '+.510ka.com'
-  - '+.510yh.cc'
   - '+.511.la'
   - '+.511023.com'
   - '+.51110.com'
@@ -3867,7 +3865,6 @@ payload:
   - '+.51baoku.com'
   - '+.51baoshui.com'
   - '+.51baoxiu.com'
-  - '+.51baozhanggui.com'
   - '+.51bbo.com'
   - '+.51besttea.com'
   - '+.51bi.com'
@@ -5076,6 +5073,7 @@ payload:
   - '+.5h.com'
   - '+.5ha.net'
   - '+.5hanjutv.com'
+  - '+.5hao21.com'
   - '+.5hb.org'
   - '+.5hrc.com'
   - '+.5hte21mz.com'
@@ -6138,6 +6136,7 @@ payload:
   - '+.80zhan.com'
   - '+.810236.com'
   - '+.810251.com'
+  - '+.8104510.com'
   - '+.8108188.com'
   - '+.810840.com'
   - '+.812361.com'
@@ -6227,6 +6226,7 @@ payload:
   - '+.849959.com'
   - '+.84dwc.com'
   - '+.84fk.com'
+  - '+.84ju.com'
   - '+.84ktv.com'
   - '+.84zcb.com'
   - '+.84zhu.com'
@@ -7159,7 +7159,6 @@ payload:
   - '+.99cc.com'
   - '+.99cfw.com'
   - '+.99cloud.net'
-  - '+.99daigou.com'
   - '+.99danji.com'
   - '+.99ddd.com'
   - '+.99down.com'
@@ -7514,6 +7513,7 @@ payload:
   - '+.accyy.com'
   - '+.acde.net'
   - '+.ace-pow.com'
+  - '+.ace2004kamakura.com'
   - '+.acejoy.com'
   - '+.acelamicro.com'
   - '+.acesheep.com'
@@ -7881,6 +7881,7 @@ payload:
   - '+.ahjem.com'
   - '+.ahjgxy.com'
   - '+.ahjk.com'
+  - '+.ahjkjt.com'
   - '+.ahjtxx.com'
   - '+.ahjyec.com'
   - '+.ahjyzb.com'
@@ -10490,7 +10491,6 @@ payload:
   - '+.bdwater.com'
   - '+.bdwm.net'
   - '+.bdwork.com'
-  - '+.bdxdnj.com'
   - '+.bdxhj.com'
   - '+.bdxiaodai.com'
   - '+.bdxiguaimg.com'
@@ -10928,6 +10928,7 @@ payload:
   - '+.bifeige.com'
   - '+.big-bit.com'
   - '+.big-shanghai.com'
+  - '+.big-site.com'
   - '+.bigaaa.net'
   - '+.bigaka.com'
   - '+.bigan.net'
@@ -11254,7 +11255,6 @@ payload:
   - '+.bizhicool.com'
   - '+.bizhidaquan.com'
   - '+.bizhiquan.com'
-  - '+.bizhitupian.com'
   - '+.bizhizj.com'
   - '+.bizhongchou.com'
   - '+.bizmoto.com'
@@ -11588,6 +11588,7 @@ payload:
   - '+.blangel-tool.com'
   - '+.blazefire.com'
   - '+.blazefire.net'
+  - '+.blazingcats.com'
   - '+.blbx.com'
   - '+.blctwed.com'
   - '+.bld-hotel.com'
@@ -12665,6 +12666,7 @@ payload:
   - '+.calibur.tv'
   - '+.callda.com'
   - '+.callmewhy.com'
+  - '+.callmyfun.com'
   - '+.caloinfo.com'
   - '+.calorietech.com'
   - '+.calt.com'
@@ -13668,6 +13670,7 @@ payload:
   - '+.chaimage.com'
   - '+.chain-store.net'
   - '+.chaincar.com'
+  - '+.chaincatcher.com'
   - '+.chainflag.com'
   - '+.chainknow.com'
   - '+.chainnode.com'
@@ -15752,7 +15755,6 @@ payload:
   - '+.cndids.com'
   - '+.cndingxi.com'
   - '+.cndip.com'
-  - '+.cndjyswlw.com'
   - '+.cndkc.net'
   - '+.cndns.com'
   - '+.cndns5.com'
@@ -15913,6 +15915,7 @@ payload:
   - '+.cnjob.com'
   - '+.cnjoel.com'
   - '+.cnjournals.com'
+  - '+.cnjournals.org'
   - '+.cnjpetr.org'
   - '+.cnjunzilan.com'
   - '+.cnjxol.com'
@@ -16076,7 +16079,6 @@ payload:
   - '+.cnsc8.com'
   - '+.cnsce.net'
   - '+.cnscee.com'
-  - '+.cnscfa.com'
   - '+.cnscore.com'
   - '+.cnsdjxw.com'
   - '+.cnsdtv.com'
@@ -18936,7 +18938,6 @@ payload:
   - '+.djstechpc.com'
   - '+.djstg.com'
   - '+.dju8.com'
-  - '+.djw51.com'
   - '+.djwcp.com'
   - '+.djwxw.com'
   - '+.djxfar6.com'
@@ -18979,7 +18980,6 @@ payload:
   - '+.dldlsw.com'
   - '+.dledu.com'
   - '+.dlfederal.com'
-  - '+.dlg029.com'
   - '+.dlgaoji.com'
   - '+.dlgcpvc.com'
   - '+.dlgwbn.com'
@@ -19641,6 +19641,7 @@ payload:
   - '+.dsblog.net'
   - '+.dscbs.com'
   - '+.dsdbearing.com'
+  - '+.dsdf.com'
   - '+.dsdjclub.com'
   - '+.dsfdc.com'
   - '+.dsfof.com'
@@ -22899,7 +22900,6 @@ payload:
   - '+.friok.com'
   - '+.frjie.com'
   - '+.frlh168.com'
-  - '+.fro14.com'
   - '+.frombyte.com'
   - '+.fromgeek.com'
   - '+.fromhomelearn.com'
@@ -23280,6 +23280,7 @@ payload:
   - '+.fzyfs.net'
   - '+.fzzqcdn.com'
   - '+.fzzycs.com'
+  - '+.fzzyky.com'
   - '+.g-emall.com'
   - '+.g-photography.net'
   - '+.g-var.com'
@@ -23763,6 +23764,7 @@ payload:
   - '+.gdyunyin.net'
   - '+.gdyxc.com'
   - '+.gdzbs.com'
+  - '+.gdzhbxg.com'
   - '+.gdzhlh.com'
   - '+.gdzhongshan.com'
   - '+.gdzp.org'
@@ -24340,6 +24342,7 @@ payload:
   - '+.godruoyi.com'
   - '+.godsheepteam.com'
   - '+.godsignal.com'
+  - '+.godweiyang.com'
   - '+.godwolf.com'
   - '+.goeasy.io'
   - '+.goepe.com'
@@ -25839,6 +25842,7 @@ payload:
   - '+.hanshuliang.com'
   - '+.hansight.com'
   - '+.hansiji.com'
+  - '+.hanslaser.net'
   - '+.hansme.com'
   - '+.hanspub.org'
   - '+.hansrobot.com'
@@ -26060,6 +26064,7 @@ payload:
   - '+.haoshsh.com'
   - '+.haoshunjx.com'
   - '+.haoshuo.com'
+  - '+.haoshuya.com'
   - '+.haosijia.com'
   - '+.haosijia.vip'
   - '+.haosix.com'
@@ -26189,6 +26194,7 @@ payload:
   - '+.hasndq.com'
   - '+.hasoltd.com'
   - '+.hassbian.com'
+  - '+.hat-toraya.com'
   - '+.hat358.com'
   - '+.hatdot.com'
   - '+.hatfav.com'
@@ -26450,6 +26456,7 @@ payload:
   - '+.hch518.com'
   - '+.hchbblg.com'
   - '+.hchezhu.com'
+  - '+.hchfr.com'
   - '+.hchlidc.com'
   - '+.hcicloud.com'
   - '+.hcjsk120.com'
@@ -27273,6 +27280,7 @@ payload:
   - '+.hl95.com'
   - '+.hlapi.com'
   - '+.hlbeixiu.com'
+  - '+.hlbeixiu.net'
   - '+.hld-marathon.com'
   - '+.hldbtv.com'
   - '+.hldgp.com'
@@ -28926,7 +28934,6 @@ payload:
   - '+.hyundai-hmtc.com'
   - '+.hyundaibeijing.com'
   - '+.hyuuhit.com'
-  - '+.hywly.com'
   - '+.hyxrzs.com'
   - '+.hyyf.net'
   - '+.hyyoa.com'
@@ -28946,6 +28953,7 @@ payload:
   - '+.hzaee.com'
   - '+.hzairport.com'
   - '+.hzamcare.com'
+  - '+.hzapuqi.com'
   - '+.hzbenet.com'
   - '+.hzbh.com'
   - '+.hzbike.com'
@@ -31320,6 +31328,7 @@ payload:
   - '+.jchl.com'
   - '+.jchla.com'
   - '+.jchxmc.com'
+  - '+.jcicl.com'
   - '+.jcku.com'
   - '+.jcloud-cache.com'
   - '+.jcloud-cdn.com'
@@ -31675,6 +31684,7 @@ payload:
   - '+.jian.net'
   - '+.jianada-qianzheng.com'
   - '+.jianai360.com'
+  - '+.jianavi.com'
   - '+.jianbaizhan.com'
   - '+.jianbaolife.com'
   - '+.jianbihua.org'
@@ -32303,6 +32313,7 @@ payload:
   - '+.jisapower.com'
   - '+.jisec.com'
   - '+.jishi3.com'
+  - '+.jishicloud.com'
   - '+.jishicn.com'
   - '+.jishida.vip'
   - '+.jishuchi.com'
@@ -33359,6 +33370,7 @@ payload:
   - '+.jutoula.com'
   - '+.jutuilian.com'
   - '+.juturn.com'
+  - '+.juubei.com'
   - '+.juvefans.com'
   - '+.juwa.net'
   - '+.juwan.com'
@@ -34094,7 +34106,6 @@ payload:
   - '+.kenfor.net'
   - '+.kengatoki.com'
   - '+.kengdie.com'
-  - '+.kengso.com'
   - '+.kengwan.com'
   - '+.keniu.com'
   - '+.keniub.com'
@@ -34878,7 +34889,6 @@ payload:
   - '+.kuche.com'
   - '+.kuchuan.com'
   - '+.kudasuye.com'
-  - '+.kudiannao.com'
   - '+.kudianqi.com'
   - '+.kudiaoyu.com'
   - '+.kudingyu.com'
@@ -35196,6 +35206,7 @@ payload:
   - '+.laily.net'
   - '+.laima-tech.com'
   - '+.laimaidi.com'
+  - '+.laipeitu.com'
   - '+.laiqi.net'
   - '+.laiqukankan.com'
   - '+.laird-tek.com'
@@ -35548,6 +35559,7 @@ payload:
   - '+.lc-cn-n1-thovg.com'
   - '+.lc-news.com'
   - '+.lc123.net'
+  - '+.lc73.com'
   - '+.lc787.com'
   - '+.lcbdf.net'
   - '+.lcbtv.com'
@@ -37114,6 +37126,7 @@ payload:
   - '+.lopopoo.com'
   - '+.lopss.com'
   - '+.lorefree.com'
+  - '+.lorike.com'
   - '+.losala.com'
   - '+.losking.com'
   - '+.lossyou.com'
@@ -38254,6 +38267,7 @@ payload:
   - '+.mat-test.com'
   - '+.matao.com'
   - '+.matchvs.com'
+  - '+.mateair.com'
   - '+.math168.com'
   - '+.mathchina.net'
   - '+.mathfan.com'
@@ -38407,6 +38421,7 @@ payload:
   - '+.mcyhfl.com'
   - '+.mcyo.pw'
   - '+.mczyz.com'
+  - '+.md0408.com'
   - '+.mdaxue.com'
   - '+.mdbimg.com'
   - '+.mdckj.com'
@@ -40921,6 +40936,7 @@ payload:
   - '+.nfyk.com'
   - '+.nfzhouyi.com'
   - '+.nfzmbrand.com'
+  - '+.nfzplus.com'
   - '+.ng-alain.com'
   - '+.nga.wiki'
   - '+.ngabbs.com'
@@ -42635,6 +42651,7 @@ payload:
   - '+.pbtdl.com'
   - '+.pbtxt.com'
   - '+.pc-daily.com'
+  - '+.pc-house.net'
   - '+.pc120.com'
   - '+.pc120tv.com'
   - '+.pc18.net'
@@ -42702,6 +42719,7 @@ payload:
   - '+.pcwenti.com'
   - '+.pcwl.com'
   - '+.pcyangguangban.com'
+  - '+.pczhuji.com'
   - '+.pd-sts.com'
   - '+.pd120.com'
   - '+.pd17.com'
@@ -43378,6 +43396,7 @@ payload:
   - '+.pokemon.name'
   - '+.pokermate.net'
   - '+.poketec.com'
+  - '+.pokochin-house.com'
   - '+.pokooo.com'
   - '+.polaris-vc.com'
   - '+.polarws.moe'
@@ -44948,6 +44967,7 @@ payload:
   - '+.qqssly.com'
   - '+.qqstudent.com'
   - '+.qqsurvey.net'
+  - '+.qqswzx.com'
   - '+.qqt6.com'
   - '+.qqteacher.com'
   - '+.qqtest.com'
@@ -45400,7 +45420,6 @@ payload:
   - '+.qyglzz.com'
   - '+.qygzbxpt.com'
   - '+.qyham.com'
-  - '+.qyhl.net'
   - '+.qyi.io'
   - '+.qyiliao.com'
   - '+.qyjpzx.com'
@@ -45468,6 +45487,7 @@ payload:
   - '+.r-tms.net'
   - '+.r12345.com'
   - '+.r147emh.com'
+  - '+.r18moeimages.xyz'
   - '+.r1x1.com'
   - '+.r1y.com'
   - '+.r220.cc'
@@ -45493,6 +45513,7 @@ payload:
   - '+.radius-america.com'
   - '+.raeblog.com'
   - '+.ragbear.com'
+  - '+.rahisystems-cn.com'
   - '+.raidc.com'
   - '+.rail-transit.com'
   - '+.railcn.net'
@@ -45721,6 +45742,7 @@ payload:
   - '+.redshu.com'
   - '+.redstaraward.org'
   - '+.redsun-rp.com'
+  - '+.redsunsets.ml'
   - '+.redyue.com'
   - '+.redyue.org'
   - '+.reedii.com'
@@ -46679,7 +46701,6 @@ payload:
   - '+.sbc398.com'
   - '+.sbc665.com'
   - '+.sbeira.com'
-  - '+.sbgl.net'
   - '+.sbh15.com'
   - '+.sbiquge.com'
   - '+.sbk-h5.com'
@@ -46824,7 +46845,6 @@ payload:
   - '+.scoregg.com'
   - '+.scp-wiki-cn.org'
   - '+.scpgroup.com'
-  - '+.scpic8.com'
   - '+.scplt.com'
   - '+.scqcp.com'
   - '+.scqiuchang.com'
@@ -47151,7 +47171,6 @@ payload:
   - '+.seinfeldtv.com'
   - '+.seisman.info'
   - '+.sejai.com'
-  - '+.sejie16.xyz'
   - '+.sekede.net'
   - '+.sekorm.com'
   - '+.selboo.com'
@@ -47454,6 +47473,7 @@ payload:
   - '+.shanghai-map.net'
   - '+.shanghaiairport.com'
   - '+.shanghaiboji.com'
+  - '+.shanghaiboxu.com'
   - '+.shanghaicaiyi.com'
   - '+.shanghaichannel.net'
   - '+.shanghaiconcerthall.org'
@@ -48015,6 +48035,7 @@ payload:
   - '+.shjt.net'
   - '+.shjxfc.com'
   - '+.shjyou.com'
+  - '+.shjyyx.com'
   - '+.shkegai.net'
   - '+.shkkl.com'
   - '+.shkuangjing.com'
@@ -48190,6 +48211,7 @@ payload:
   - '+.shsbzl.com'
   - '+.shsci.org'
   - '+.shsee.com'
+  - '+.shsgyq.com'
   - '+.shshilin.com'
   - '+.shsipo.com'
   - '+.shsixun.com'
@@ -49751,6 +49773,7 @@ payload:
   - '+.ssjjtt.com'
   - '+.ssjlicai.com'
   - '+.ssjyhy.com'
+  - '+.ssjz8.com'
   - '+.ssjzw.com'
   - '+.ssky123.com'
   - '+.sslaaa.com'
@@ -50999,7 +51022,6 @@ payload:
   - '+.tajyw.net'
   - '+.takungae.com'
   - '+.takungpao.com'
-  - '+.tal-rasha.com'
   - '+.taladapp.com'
   - '+.talbrain.com'
   - '+.talebase.com'
@@ -51401,6 +51423,7 @@ payload:
   - '+.teacti.com'
   - '+.teakki.com'
   - '+.teaku.com'
+  - '+.team-sws.com'
   - '+.teamall.cc'
   - '+.teambition.com'
   - '+.teambition.net'
@@ -53618,7 +53641,6 @@ payload:
   - '+.uhuitong.com'
   - '+.ui001.com'
   - '+.ui100day.com'
-  - '+.ui4app.com'
   - '+.ui63.com'
   - '+.ui879.com'
   - '+.uibaba.com'
@@ -53653,6 +53675,7 @@ payload:
   - '+.uiste.com'
   - '+.uiu.cc'
   - '+.uiwed.com'
+  - '+.ujakn.com'
   - '+.ujia007.com'
   - '+.ujian.cc'
   - '+.ujinbi.com'
@@ -54568,7 +54591,6 @@ payload:
   - '+.vland-official.com'
   - '+.vlandgroup.com'
   - '+.vlcms.com'
-  - '+.vldbd.com'
   - '+.vliang.com'
   - '+.vlightv.com'
   - '+.vlinkage.com'
@@ -58641,7 +58663,6 @@ payload:
   - '+.xiezefan.me'
   - '+.xiezewen.com'
   - '+.xiezhenxian.net'
-  - '+.xiezhicehua.com'
   - '+.xieziqiu.net'
   - '+.xiezixiansheng.com'
   - '+.xiezuo100.com'
@@ -61630,6 +61651,7 @@ payload:
   - '+.ynshijian.com'
   - '+.ynsjg.com'
   - '+.ynsqx.com'
+  - '+.yntc999.com'
   - '+.ynteng.com'
   - '+.yntsg.com'
   - '+.ynwin.com'
@@ -63482,7 +63504,6 @@ payload:
   - '+.zg388.com'
   - '+.zg3china.com'
   - '+.zg45.net'
-  - '+.zga81.com'
   - '+.zgaxr.com'
   - '+.zgazxxw.com'
   - '+.zgbenrun.com'
@@ -63600,7 +63621,6 @@ payload:
   - '+.zgsclp.com'
   - '+.zgsd.net'
   - '+.zgserver.com'
-  - '+.zgshici.com'
   - '+.zgshifu.com'
   - '+.zgshige.com'
   - '+.zgshjj.com'
@@ -64042,6 +64062,7 @@ payload:
   - '+.zhidao91.com'
   - '+.zhidaoanli.com'
   - '+.zhidaoketang.com'
+  - '+.zhidemai.com'
   - '+.zhidesoft.com'
   - '+.zhideyimai.com'
   - '+.zhidian3g.com'
@@ -64161,7 +64182,6 @@ payload:
   - '+.zhishichong.com'
   - '+.zhishifenzi.com'
   - '+.zhishihao.com'
-  - '+.zhishikoo.com'
   - '+.zhishilin.com'
   - '+.zhishiniu.com'
   - '+.zhishisoft.com'
@@ -64327,6 +64347,7 @@ payload:
   - '+.zhongkerd.com'
   - '+.zhongkezhuyan.com'
   - '+.zhongkongbancn.com'
+  - '+.zhongkongdaikuan.com'
   - '+.zhongleny.com'
   - '+.zhonglewz.com'
   - '+.zhonglian.com'
