--- a/directbak.yaml
+++ b/directbak.yaml
@@ -3306,6 +3306,7 @@ payload:
   - '+.3eyes.org'
   - '+.3fang.com'
   - '+.3fantizi.com'
+  - '+.3fgal.com'
   - '+.3g-edu.org'
   - '+.3g210.com'
   - '+.3g2win.com'
@@ -3371,6 +3372,7 @@ payload:
   - '+.3s78.com'
   - '+.3sbase.com'
   - '+.3scard.com'
+  - '+.3seconds.net'
   - '+.3shuwu.com'
   - '+.3snews.net'
   - '+.3songshu.com'
@@ -5020,7 +5022,6 @@ payload:
   - '+.5ajob.com'
   - '+.5alw.com'
   - '+.5any.com'
-  - '+.5atxt.com'
   - '+.5axxw.com'
   - '+.5azy.com'
   - '+.5bite.com'
@@ -5475,7 +5476,6 @@ payload:
   - '+.678pdf.com'
   - '+.678py.com'
   - '+.67cdn.com'
-  - '+.67gu.com'
   - '+.67joy.com'
   - '+.67lm.com'
   - '+.67mb.com'
@@ -7517,6 +7517,7 @@ payload:
   - '+.acg18s.com'
   - '+.acg4.com'
   - '+.acg456.com'
+  - '+.acg588.com'
   - '+.acg6.com'
   - '+.acgaa.xyz'
   - '+.acgcp.com'
@@ -8006,7 +8007,6 @@ payload:
   - '+.aifangke.com'
   - '+.aifanr.net'
   - '+.aifanyi.net'
-  - '+.aifbr.com'
   - '+.aifcdn.com'
   - '+.aifei8.net'
   - '+.aifengjie.com'
@@ -9173,6 +9173,7 @@ payload:
   - '+.appykt.com'
   - '+.appzhonghua.com'
   - '+.appzhu.com'
+  - '+.apqianzhuo.com'
   - '+.apsgo.com'
   - '+.apt.so'
   - '+.aptchina.com'
@@ -10405,7 +10406,6 @@ payload:
   - '+.bclsw.com'
   - '+.bcmcdn.com'
   - '+.bcmeng.com'
-  - '+.bcoderss.com'
   - '+.bcpcn.com'
   - '+.bcpgame.com'
   - '+.bcrealm.com'
@@ -12354,6 +12354,7 @@ payload:
   - '+.bytefae.com'
   - '+.bytefcdn.com'
   - '+.bytegecko.com'
+  - '+.bytegeckoext.com'
   - '+.bytegoofy.com'
   - '+.bytegslb.com'
   - '+.bytehwm.com'
@@ -13267,6 +13268,7 @@ payload:
   - '+.cdnhwc3.com'
   - '+.cdnhwc6.com'
   - '+.cdnhwchcg02.com'
+  - '+.cdnhwcibv122.com'
   - '+.cdni.net'
   - '+.cdnidc.net'
   - '+.cdnjtzy.com'
@@ -13386,6 +13388,7 @@ payload:
   - '+.ceeie.com'
   - '+.ceeji.net'
   - '+.ceepsp.com'
+  - '+.ceev-japan.com'
   - '+.cef114.com'
   - '+.cefc.co'
   - '+.cehbe.com'
@@ -15805,7 +15808,6 @@ payload:
   - '+.cnfsae.com'
   - '+.cnfuyin.org'
   - '+.cnfxj.org'
-  - '+.cnfygy.com'
   - '+.cnfyyj.com'
   - '+.cnfzflw.com'
   - '+.cngal.org'
@@ -15838,6 +15840,7 @@ payload:
   - '+.cnhd.com'
   - '+.cnhetianyu.com'
   - '+.cnhhl.com'
+  - '+.cnhis.cc'
   - '+.cnhls.com'
   - '+.cnhlsxe.com'
   - '+.cnhm.net'
@@ -18189,6 +18192,7 @@ payload:
   - '+.dedeyun.com'
   - '+.dedezhuji.com'
   - '+.deehai.com'
+  - '+.deelplumbing.com'
   - '+.deemob.com'
   - '+.deemos.com'
   - '+.deepai.com'
@@ -19754,7 +19758,6 @@ payload:
   - '+.dumasoftware.com'
   - '+.dumeiwen.com'
   - '+.dumi0898.com'
-  - '+.dumili.com'
   - '+.dumpapp.com'
   - '+.dunjiaodu.com'
   - '+.dunkhome.com'
@@ -21659,6 +21662,7 @@ payload:
   - '+.fanai.com'
   - '+.fancai.com'
   - '+.fanchuanxiao.net'
+  - '+.fancl-vip.com'
   - '+.fancyapi.com'
   - '+.fancydsp.com'
   - '+.fancyecommerce.com'
@@ -24968,6 +24972,7 @@ payload:
   - '+.guixue.com'
   - '+.guizeco.com'
   - '+.guizheng.net'
+  - '+.guizumeimei.com'
   - '+.gujianba.com'
   - '+.gujianzhixiang.com'
   - '+.gujiushu.com'
@@ -25511,6 +25516,7 @@ payload:
   - '+.hack0nair.me'
   - '+.hack50.com'
   - '+.hack520.com'
+  - '+.hack99.com'
   - '+.hackav.com'
   - '+.hackcn.net'
   - '+.hackdig.com'
@@ -26157,6 +26163,7 @@ payload:
   - '+.hasea.com'
   - '+.hasee.com'
   - '+.hasee.net'
+  - '+.hashcloud.cz'
   - '+.hashcoding.net'
   - '+.hashfish.net'
   - '+.hashnest.com'
@@ -26270,7 +26277,6 @@ payload:
   - '+.hbinitiate.com'
   - '+.hbjcgy.com'
   - '+.hbjdxt.com'
-  - '+.hbjfscc.com'
   - '+.hbjhc.com'
   - '+.hbjhpx.com'
   - '+.hbjhyh.com'
@@ -31398,7 +31404,6 @@ payload:
   - '+.jdl.com'
   - '+.jdluosi.com'
   - '+.jdlxzx.com'
-  - '+.jdnettv.com'
   - '+.jdnews.net'
   - '+.jdon.com'
   - '+.jdpay.com'
@@ -32388,6 +32393,7 @@ payload:
   - '+.jiuxian.com'
   - '+.jiuxianfeng.com'
   - '+.jiuxihuan.net'
+  - '+.jiuxin56.com'
   - '+.jiuxinban.com'
   - '+.jiuxing.com'
   - '+.jiuyan.info'
@@ -32545,6 +32551,7 @@ payload:
   - '+.jkcorkpads.com'
   - '+.jkcsjd.com'
   - '+.jkdsz.com'
+  - '+.jkfwvip.com'
   - '+.jkgood.com'
   - '+.jkidc.com'
   - '+.jkimg.net'
@@ -33604,6 +33611,7 @@ payload:
   - '+.jzzx.com'
   - '+.jzzy666.com'
   - '+.k-day.com'
+  - '+.k-ichiken.com'
   - '+.k-kbox.com'
   - '+.k-res.net'
   - '+.k-xian.com'
@@ -37225,6 +37233,7 @@ payload:
   - '+.lsbchina.com'
   - '+.lsbin.com'
   - '+.lsccb.com'
+  - '+.lscsfw.com'
   - '+.lsfyw.net'
   - '+.lsg3.com'
   - '+.lsgrandtheatre.com'
@@ -38211,6 +38220,7 @@ payload:
   - '+.mashang98.com'
   - '+.mashangmai.com'
   - '+.mashangshijie.com'
+  - '+.masjinquan.com'
   - '+.mass-evo.com'
   - '+.massclouds.com'
   - '+.masscrunch.com'
@@ -38273,7 +38283,6 @@ payload:
   - '+.maxwi.com'
   - '+.maxxipoint.com'
   - '+.may.ltd'
-  - '+.maya-r.com'
   - '+.maya09.com'
   - '+.mayahuashi.com'
   - '+.mayatu.com'
@@ -39908,7 +39917,6 @@ payload:
   - '+.mtcx99.com'
   - '+.mtdpai.com'
   - '+.mtdpgame.com'
-  - '+.mtdx.net'
   - '+.mtedu.com'
   - '+.mtex.work'
   - '+.mtgchina.com'
@@ -42049,6 +42057,7 @@ payload:
   - '+.orange2h.com'
   - '+.orangeapk.com'
   - '+.orangelive.tv'
+  - '+.orangemum.com'
   - '+.orangepi.org'
   - '+.orangetech.ltd'
   - '+.orangevip.com'
@@ -42558,7 +42567,7 @@ payload:
   - '+.partinchina.com'
   - '+.partner.cdnetworks.com'
   - '+.partner.globalsign.com'
-  - '+.parwix.com'
+  - '+.pasosta.net'
   - '+.pass7.cc'
   - '+.passby.me'
   - '+.passer-by.com'
@@ -42909,6 +42918,7 @@ payload:
   - '+.phpdr.net'
   - '+.phpe.net'
   - '+.phpernote.com'
+  - '+.phperservice.com'
   - '+.phperxuqin.com'
   - '+.phperz.com'
   - '+.phpfdc.com'
@@ -46925,6 +46935,7 @@ payload:
   - '+.sdlangkun.com'
   - '+.sdlgzy.com'
   - '+.sdlinqu.com'
+  - '+.sdljwomen.com'
   - '+.sdlldj.com'
   - '+.sdlongli.com'
   - '+.sdlvxing.com'
@@ -50750,6 +50761,7 @@ payload:
   - '+.szrcfw.com'
   - '+.szrlqy.com'
   - '+.szrrjc.com'
+  - '+.szrtcpa.com'
   - '+.szschj.com'
   - '+.szsci.net'
   - '+.szscree.com'
@@ -51220,6 +51232,7 @@ payload:
   - '+.taskcn.com'
   - '+.taskyou.net'
   - '+.tasly.com'
+  - '+.tass-t.com'
   - '+.tastespirit.com'
   - '+.tastones.com'
   - '+.tastysteak.com'
@@ -51984,7 +51997,6 @@ payload:
   - '+.timipc.com'
   - '+.timitime.com'
   - '+.timjx.com'
-  - '+.tinderboxx.com'
   - '+.tinfinite.com'
   - '+.ting-tou.com'
   - '+.ting55.com'
@@ -52844,8 +52856,6 @@ payload:
   - '+.ttwx.com'
   - '+.ttxn.com'
   - '+.ttxs123.net'
-  - '+.ttxs234.com'
-  - '+.ttxs789.com'
   - '+.ttxsapp.com'
   - '+.ttxuanpai.com'
   - '+.ttyingqiu.com'
@@ -53612,6 +53622,7 @@ payload:
   - '+.uisrc.com'
   - '+.uiste.com'
   - '+.uiu.cc'
+  - '+.uiusc.com'
   - '+.uiwed.com'
   - '+.ujakn.com'
   - '+.ujia007.com'
@@ -54663,7 +54674,6 @@ payload:
   - '+.vrgame520.com'
   - '+.vrjie.com'
   - '+.vrlequ.com'
-  - '+.vrltec.com'
   - '+.vrmvip.com'
   - '+.vrpowder.com'
   - '+.vrsat.com'
@@ -55554,7 +55564,6 @@ payload:
   - '+.weikengtech.com'
   - '+.weikuo.cc'
   - '+.weikuw.com'
-  - '+.weilairibao.com'
   - '+.weilaishidai.com'
   - '+.weilaitiku.com'
   - '+.weilaizhaiju.com'
@@ -55943,6 +55952,7 @@ payload:
   - '+.wfiltericf.com'
   - '+.wfilterngf.com'
   - '+.wfjimg.com'
+  - '+.wfjtjy.com'
   - '+.wfkouyaji.com'
   - '+.wflgjx.com'
   - '+.wfsdf.com'
@@ -57417,6 +57427,7 @@ payload:
   - '+.wxgamemini.com'
   - '+.wxgrcpa.com'
   - '+.wxguan.com'
+  - '+.wxgz.net'
   - '+.wxhand.com'
   - '+.wxhbts.com'
   - '+.wxhon.com'
@@ -58310,7 +58321,6 @@ payload:
   - '+.xiaolinsi.com'
   - '+.xiaolinwl.com'
   - '+.xiaolinyuan.com'
-  - '+.xiaolist.com'
   - '+.xiaolizhuli.com'
   - '+.xiaolu123.com'
   - '+.xiaoluboke.com'
@@ -61693,7 +61703,6 @@ payload:
   - '+.yonyouscf.com'
   - '+.yonyouup.com'
   - '+.yoo-hn.com'
-  - '+.yoo1.com'
   - '+.yoodb.com'
   - '+.yooek.com'
   - '+.yooerjia.com'
@@ -61820,6 +61829,7 @@ payload:
   - '+.youkua.net'
   - '+.youkudou.com'
   - '+.youkudown.com'
+  - '+.youlady.cc'
   - '+.youlanw.com'
   - '+.youle55.com'
   - '+.youleliwu.com'
@@ -62329,6 +62339,7 @@ payload:
   - '+.yucccc.com'
   - '+.yuchai.com'
   - '+.yuchen360.com'
+  - '+.yucheng0769.net'
   - '+.yuchengwang.com'
   - '+.yuchenjf.com'
   - '+.yuchenw.com'
@@ -62409,7 +62420,6 @@ payload:
   - '+.yueyanglou.com'
   - '+.yueyat.net'
   - '+.yueyear.com'
-  - '+.yueyin99.com'
   - '+.yueyouxs.com'
   - '+.yueyq.com'
   - '+.yueyu114.com'
@@ -63949,6 +63959,7 @@ payload:
   - '+.zhgl.com'
   - '+.zhgnj.com'
   - '+.zhgqt.com'
+  - '+.zhgsw.com'
   - '+.zhguoguo.com'
   - '+.zhh.me'
   - '+.zhhainiao.com'
@@ -65756,6 +65767,7 @@ payload:
   - '+.zytxgame.com'
   - '+.zyucan.com'
   - '+.zyue.com'
+  - '+.zywjjdw.com'
   - '+.zywjw.com'
   - '+.zywxpress.com'
   - '+.zyxr.com'
