--- a/directbak.yaml
+++ b/directbak.yaml
@@ -1962,7 +1962,6 @@ payload:
   - '+.1tuikem.com'
   - '+.1uke.com'
   - '+.1uuc.com'
-  - '+.1v1offcn.com'
   - '+.1vp.me'
   - '+.1wandian.com'
   - '+.1wang.com'
@@ -3248,6 +3247,7 @@ payload:
   - '+.3bu.com'
   - '+.3bwx.com'
   - '+.3c2p.com'
+  - '+.3cchina88.com'
   - '+.3chongmen.com'
   - '+.3cjob.com'
   - '+.3conline.com'
@@ -5409,6 +5409,7 @@ payload:
   - '+.668map.com'
   - '+.668news.com'
   - '+.6695.com'
+  - '+.6699pj.com'
   - '+.669pic.com'
   - '+.669play.com'
   - '+.669ye.com'
@@ -8951,6 +8952,7 @@ payload:
   - '+.aoedi.com'
   - '+.aoerdz.com'
   - '+.aoetech.com'
+  - '+.aofahairextension.com'
   - '+.aofenghuanjing.com'
   - '+.aofenglu.com'
   - '+.aograph.com'
@@ -10460,6 +10462,7 @@ payload:
   - '+.bdqn666.com'
   - '+.bdqnwh.com'
   - '+.bds-cn.com'
+  - '+.bdsana.com'
   - '+.bdsgps.com'
   - '+.bdshuang.com'
   - '+.bdsimg.com'
@@ -12632,6 +12635,7 @@ payload:
   - '+.caixin021.com'
   - '+.caixinfoundation.org'
   - '+.caixun.com'
+  - '+.caiyicloud.com'
   - '+.caiyiduo.com'
   - '+.caiyun.com'
   - '+.caiyunai.com'
@@ -12908,6 +12912,7 @@ payload:
   - '+.ccbookfair.com'
   - '+.ccbpension.com'
   - '+.ccbride.com'
+  - '+.ccbwfs.com'
   - '+.cccaq.com'
   - '+.cccbs.net'
   - '+.ccccl.net'
@@ -15410,7 +15415,6 @@ payload:
   - '+.clouddiffuse.xyz'
   - '+.clouddn.com'
   - '+.clouddream.net'
-  - '+.cloudflarea.com'
   - '+.cloudgap.net'
   - '+.cloudgfw.com'
   - '+.cloudgfw.net'
@@ -16602,6 +16606,7 @@ payload:
   - '+.cpxco.net'
   - '+.cpxsxk.com'
   - '+.cpython.org'
+  - '+.cpzjzx.com'
   - '+.cq-wnl.com'
   - '+.cq.cm'
   - '+.cq315house.com'
@@ -16952,6 +16957,7 @@ payload:
   - '+.csmall.com'
   - '+.csmama.net'
   - '+.csmar.com'
+  - '+.csmarryme.com'
   - '+.csmbcx.com'
   - '+.csmc-cloud.com'
   - '+.csmscon.com'
@@ -19145,7 +19151,6 @@ payload:
   - '+.dnswa.com'
   - '+.dnswhk.com'
   - '+.dnswind.net'
-  - '+.dnsx365.com'
   - '+.dnsyy.net'
   - '+.dnszh.com'
   - '+.dnxp.net'
@@ -23679,6 +23684,7 @@ payload:
   - '+.gdkjw.com'
   - '+.gdkszx.com'
   - '+.gdkz88.com'
+  - '+.gdlalian.com'
   - '+.gdlins.com'
   - '+.gdlppow.com'
   - '+.gdlsgz.com'
@@ -23693,6 +23699,7 @@ payload:
   - '+.gdong.com'
   - '+.gdou.com'
   - '+.gdpanshi.com'
+  - '+.gdpyrtvu.com'
   - '+.gdqynews.com'
   - '+.gdrc.com'
   - '+.gdrc360.com'
@@ -25184,6 +25191,7 @@ payload:
   - '+.gxidc.com'
   - '+.gxind.com'
   - '+.gxjgdj.com'
+  - '+.gxjs.net'
   - '+.gxjtaq.com'
   - '+.gxjznet.com'
   - '+.gxkjdns.com'
@@ -26361,6 +26369,7 @@ payload:
   - '+.hbswkj.com'
   - '+.hbsydw.org'
   - '+.hbszfw.com'
+  - '+.hbszlg.com'
   - '+.hbsztv.com'
   - '+.hbszzd158.com'
   - '+.hbszzk.com'
@@ -26983,6 +26992,7 @@ payload:
   - '+.hi1718.com'
   - '+.hi2000.com'
   - '+.hi2000.net'
+  - '+.hiagr.com'
   - '+.hiapk.com'
   - '+.hiavr.com'
   - '+.hibea.com'
@@ -28919,6 +28929,7 @@ payload:
   - '+.hz-etest.com'
   - '+.hz-gn.com'
   - '+.hz-hospital.com'
+  - '+.hz-jiadi.com'
   - '+.hz-winone.com'
   - '+.hz-xin.com'
   - '+.hz1cm.com'
@@ -29947,6 +29958,7 @@ payload:
   - '+.ilanluo.com'
   - '+.ilanx.net'
   - '+.ilanx0.net'
+  - '+.ilanzou.com'
   - '+.ilaw66.com'
   - '+.ilawpress.com'
   - '+.ilazycat.com'
@@ -30218,6 +30230,7 @@ payload:
   - '+.inbeijing.org'
   - '+.inbilin.com'
   - '+.inbooker.com'
+  - '+.inboyu.com'
   - '+.inc365.com'
   - '+.incake.net'
   - '+.incensechina.com'
@@ -33537,6 +33550,7 @@ payload:
   - '+.jysyzk.com'
   - '+.jyteasy.com'
   - '+.jyuvip.com'
+  - '+.jywstw.com'
   - '+.jyxdyzx.com'
   - '+.jyyun.com'
   - '+.jyz99.com'
@@ -34358,6 +34372,7 @@ payload:
   - '+.kkidc.com'
   - '+.kkj2.com'
   - '+.kkjiaofei.com'
+  - '+.kkjk.com'
   - '+.kkk5.com'
   - '+.kkkd.com'
   - '+.kkkkba.com'
@@ -35575,6 +35590,7 @@ payload:
   - '+.ldqxn.com'
   - '+.ldshj.com'
   - '+.ldsink.com'
+  - '+.ldszpx.net'
   - '+.ldtui.com'
   - '+.ldxsfw.com'
   - '+.ldycdn.com'
@@ -37174,6 +37190,7 @@ payload:
   - '+.loyar.com'
   - '+.loyo.cc'
   - '+.lpcheng.com'
+  - '+.lpetl.com'
   - '+.lpllol.com'
   - '+.lply.net'
   - '+.lppz.com'
@@ -37689,6 +37706,7 @@ payload:
   - '+.lysteel.com'
   - '+.lysy360.com'
   - '+.lythw.com'
+  - '+.lytmgd.com'
   - '+.lytning.xyz'
   - '+.lytoufang.com'
   - '+.lytpw.com'
@@ -38003,6 +38021,7 @@ payload:
   - '+.maketion.com'
   - '+.makeweiyuan.com'
   - '+.makingvfx.com'
+  - '+.makino-shoji.com'
   - '+.makuwang.com'
   - '+.malabeibei.com'
   - '+.malagis.com'
@@ -38881,6 +38900,7 @@ payload:
   - '+.miantiao.me'
   - '+.mianwai.com'
   - '+.mianxiangxue.com'
+  - '+.mianyazulin.com'
   - '+.miao-lang.com'
   - '+.miao.su'
   - '+.miaobe.com'
@@ -39384,6 +39404,7 @@ payload:
   - '+.mmfad.com'
   - '+.mmfang.cc'
   - '+.mmfbm.com'
+  - '+.mmfcezwqaz.com'
   - '+.mmfi.net'
   - '+.mmfj.com'
   - '+.mmgl.net'
@@ -43832,6 +43853,7 @@ payload:
   - '+.pythontab.com'
   - '+.pythontip.com'
   - '+.pytorchtutorial.com'
+  - '+.pytpw.com'
   - '+.pyxjiang.com'
   - '+.pyxk.com'
   - '+.pyxww.com'
@@ -43969,6 +43991,7 @@ payload:
   - '+.qdgw.com'
   - '+.qdgxqrc.com'
   - '+.qdgxzg.com'
+  - '+.qdhaichen.com'
   - '+.qdhantang.com'
   - '+.qdhmsoft.com'
   - '+.qdhsty.com'
@@ -44248,6 +44271,7 @@ payload:
   - '+.qiaohuapp.com'
   - '+.qiaohuisland.com'
   - '+.qiaohumall.com'
+  - '+.qiaohumi.com'
   - '+.qiaojiang.tv'
   - '+.qiaomi.com'
   - '+.qiaomizi.vip'
@@ -45354,7 +45378,6 @@ payload:
   - '+.qy-office.com'
   - '+.qy-qq.com'
   - '+.qy.net'
-  - '+.qy01.com'
   - '+.qy266.com'
   - '+.qy6.com'
   - '+.qy6.net'
@@ -45385,6 +45408,7 @@ payload:
   - '+.qyous.com'
   - '+.qyqc4s.com'
   - '+.qyrb.com'
+  - '+.qyren168.com'
   - '+.qysd.net'
   - '+.qysfl.com'
   - '+.qyt1902.com'
@@ -45594,6 +45618,7 @@ payload:
   - '+.rdnsdb.com'
   - '+.rdplat.com'
   - '+.rdsdk.com'
+  - '+.rdshj.com'
   - '+.rdsvsh.com'
   - '+.rdtuijian.com'
   - '+.rdwork.com'
@@ -46905,6 +46930,7 @@ payload:
   - '+.sdgw.com'
   - '+.sdgwy.org'
   - '+.sdhangmoguan.com'
+  - '+.sdhaode.com'
   - '+.sdhdssd.com'
   - '+.sdhk2008.com'
   - '+.sdhoukang.com'
@@ -47609,6 +47635,7 @@ payload:
   - '+.shcymc.com'
   - '+.shdctp.com'
   - '+.shdjt.com'
+  - '+.shdohai.com'
   - '+.shdrkj.com'
   - '+.shdsd.com'
   - '+.shdzby168.com'
@@ -48844,7 +48871,6 @@ payload:
   - '+.sjxs.la'
   - '+.sjybsc.com'
   - '+.sjycbl.com'
-  - '+.sjyst.net'
   - '+.sjytech.com'
   - '+.sjyx.com'
   - '+.sjyyt.com'
@@ -50098,6 +50124,7 @@ payload:
   - '+.sun0769ns.com'
   - '+.sun0816.com'
   - '+.sun66.net'
+  - '+.sunacctg.com'
   - '+.sunater.com'
   - '+.sunbloger.com'
   - '+.sunbo.com'
@@ -51310,6 +51337,7 @@ payload:
   - '+.tclbusiness.com'
   - '+.tclclouds.com'
   - '+.tclking.com'
+  - '+.tclkqn.com'
   - '+.tcloudbase.com'
   - '+.tcloudbaseapp.com'
   - '+.tcloudfamily.com'
@@ -52588,6 +52616,7 @@ payload:
   - '+.tqqa.com'
   - '+.tqsafe.com'
   - '+.tqschool.net'
+  - '+.tqw21.com'
   - '+.tqybw.net'
   - '+.tr518.com'
   - '+.trace4me.com'
@@ -55448,6 +55477,7 @@ payload:
   - '+.wechatpen.com'
   - '+.weclassroom.com'
   - '+.wecloudx.com'
+  - '+.wecom.work'
   - '+.wecrm.com'
   - '+.wecycling.com'
   - '+.wecydia.com'
@@ -60207,6 +60237,7 @@ payload:
   - '+.yahotab.com'
   - '+.yahuhost.com'
   - '+.yahui.hk'
+  - '+.yahuishou.com'
   - '+.yaitest.com'
   - '+.yaiyuan.com'
   - '+.yajuke.com'
@@ -62570,6 +62601,7 @@ payload:
   - '+.yunfalv.com'
   - '+.yunfan.com'
   - '+.yunfancdn.com'
+  - '+.yunfancdn.net'
   - '+.yunfandns.com'
   - '+.yunfangtan.com'
   - '+.yunfannet.com'
