--- a/directbak.yaml
+++ b/directbak.yaml
@@ -3104,7 +3104,6 @@ payload:
   - '+.36kr.net'
   - '+.36krcdn.com'
   - '+.36krcnd.com'
-  - '+.36mh.com'
   - '+.36nu.com'
   - '+.36sfw.com'
   - '+.36tr.com'
@@ -7385,7 +7384,6 @@ payload:
   - '+.aaayun.com'
   - '+.aadongman.com'
   - '+.aads-cng.net'
-  - '+.aaliyaheartha.com'
   - '+.aamachina.org'
   - '+.aaniao.com'
   - '+.aapy38.com'
@@ -8338,7 +8336,6 @@ payload:
   - '+.aleest.com'
   - '+.alenshaw.com'
   - '+.alertover.com'
-  - '+.alexandraeden.com'
   - '+.alexyan.cc'
   - '+.aleyoo.com'
   - '+.alfeng.com'
@@ -8430,7 +8427,6 @@ payload:
   - '+.aliqiche.com'
   - '+.aliresearch.com'
   - '+.alisoft.com'
-  - '+.alisonedwina.com'
   - '+.alisports.com'
   - '+.alitchina.com'
   - '+.alithefox.net'
@@ -8600,7 +8596,6 @@ payload:
   - '+.alwindoor.com'
   - '+.alxw.com'
   - '+.alyisheng.com'
-  - '+.alyssaeileen.com'
   - '+.alyzq.com'
   - '+.am774.com'
   - '+.am89.com'
@@ -10428,6 +10423,7 @@ payload:
   - '+.bdapark.com'
   - '+.bdatu.com'
   - '+.bdc-rays.com'
+  - '+.bdcdnimg.com'
   - '+.bdchina.com'
   - '+.bdcloudapi.com'
   - '+.bdclouddns.com'
@@ -12528,7 +12524,6 @@ payload:
   - '+.caibaopay.com'
   - '+.caibeike.com'
   - '+.caibowen.net'
-  - '+.caicaieat.com'
   - '+.caichongwang.com'
   - '+.caicui.com'
   - '+.caidan2.com'
@@ -15398,7 +15393,6 @@ payload:
   - '+.cloudgfw.com'
   - '+.cloudgfw.net'
   - '+.cloudglb.com'
-  - '+.cloudglb.net'
   - '+.cloudgoing.com'
   - '+.cloudguarding.com'
   - '+.cloudhosts.xyz'
@@ -20435,6 +20429,7 @@ payload:
   - '+.ecsponline.com'
   - '+.ecsxs.com'
   - '+.ecuc123.net'
+  - '+.ecukwai.com'
   - '+.ecustmde.com'
   - '+.ecvv.com'
   - '+.ecwan77.net'
@@ -25979,7 +25974,6 @@ payload:
   - '+.haopeixun.com'
   - '+.haopianyi.com'
   - '+.haopinku.com'
-  - '+.haoq.tv'
   - '+.haoqiao.com'
   - '+.haoqikan.com'
   - '+.haoqingjiaju.com'
@@ -28160,6 +28154,7 @@ payload:
   - '+.huanpingge.com'
   - '+.huanqiu.com'
   - '+.huanqiuauto.com'
+  - '+.huanqiuhuamu.com'
   - '+.huanqiukexue.com'
   - '+.huanqiumil.com'
   - '+.huanqiuw.com'
@@ -29417,6 +29412,7 @@ payload:
   - '+.id6.me'
   - '+.idabai.com'
   - '+.idachu.com'
+  - '+.idadt.com'
   - '+.idafen.com'
   - '+.idaima.com'
   - '+.idangdai.com'
@@ -29790,7 +29786,6 @@ payload:
   - '+.ihuman.com'
   - '+.ihumand.com'
   - '+.ihungyi.com'
-  - '+.ihuochaihe.com'
   - '+.ihuoqiu.com'
   - '+.ihuoshanlive.com'
   - '+.ihuoyan.com'
@@ -40955,7 +40950,6 @@ payload:
   - '+.nihaodd.com'
   - '+.nihaotw.com'
   - '+.nihaowang.com'
-  - '+.nihaowua.com'
   - '+.nihontu-cn.com'
   - '+.nihuwo.net'
   - '+.niiceda.com'
@@ -43479,7 +43473,6 @@ payload:
   - '+.pppie.com'
   - '+.pppoevps.com'
   - '+.pppoo.com'
-  - '+.ppppgps.com'
   - '+.ppppic.com'
   - '+.ppqq.net'
   - '+.pps.tv'
@@ -45355,7 +45348,6 @@ payload:
   - '+.qyled.xyz'
   - '+.qymgc.com'
   - '+.qyous.com'
-  - '+.qyqc4s.com'
   - '+.qyrb.com'
   - '+.qyren168.com'
   - '+.qysd.net'
@@ -47066,7 +47058,6 @@ payload:
   - '+.seekfunbook.com'
   - '+.seekhill.com'
   - '+.seekonly.net'
-  - '+.seekpetm.com'
   - '+.seekplay.online'
   - '+.seelvyou.com'
   - '+.seemmo.com'
@@ -49202,6 +49193,7 @@ payload:
   - '+.sodeog.com'
   - '+.sodexo-cn.com'
   - '+.sodhef.com'
+  - '+.sodianwan.com'
   - '+.sodino.com'
   - '+.sodocloud.com'
   - '+.sodocs.net'
@@ -50424,6 +50416,7 @@ payload:
   - '+.sxszw.net'
   - '+.sxthzs.com'
   - '+.sxtppm.com'
+  - '+.sxtqsl.com'
   - '+.sxtvs.com'
   - '+.sxtybook.com'
   - '+.sxuyr2nx.com'
@@ -52118,7 +52111,6 @@ payload:
   - '+.tjzentan.com'
   - '+.tjzfcg.com'
   - '+.tjzhongyiyao.com'
-  - '+.tjzsxl4.com'
   - '+.tjzyec.com'
   - '+.tk-rays.com'
   - '+.tk-xiong.com'
@@ -52196,7 +52188,6 @@ payload:
   - '+.tmxmall.com'
   - '+.tmxxw.com'
   - '+.tn2000.com'
-  - '+.tn597.com'
   - '+.tnbz.com'
   - '+.tnccdn.com'
   - '+.tnet.hk'
@@ -54356,7 +54347,6 @@ payload:
   - '+.vimicro.com'
   - '+.vimiix.com'
   - '+.vimiy.com'
-  - '+.vimjc.com'
   - '+.vimlinux.com'
   - '+.vims04.com'
   - '+.vimsky.com'
@@ -58026,6 +58016,7 @@ payload:
   - '+.xiadele.com'
   - '+.xiadts.com'
   - '+.xiadu.com'
+  - '+.xiafandi.com'
   - '+.xiagaoqing.com'
   - '+.xiagepian.com'
   - '+.xiakeol.com'
@@ -62422,6 +62413,7 @@ payload:
   - '+.yujunjie.com'
   - '+.yujunren.com'
   - '+.yujzw.com'
+  - '+.yukeinfo.com'
   - '+.yukhj.com'
   - '+.yukicomic.com'
   - '+.yukiimall.com'
