--- a/directbak.yaml
+++ b/directbak.yaml
@@ -5331,7 +5331,6 @@ payload:
   - '+.64w.cc'
   - '+.651700.com'
   - '+.6528.com'
-  - '+.654.com'
   - '+.654320.com'
   - '+.6543210.com'
   - '+.654321wan.com'
@@ -8297,7 +8296,6 @@ payload:
   - '+.akhtm.com'
   - '+.akhy.com'
   - '+.akinoheya.com'
-  - '+.akjunshi.com'
   - '+.akkogear.com'
   - '+.akng.net'
   - '+.akniu.com'
@@ -15422,7 +15420,6 @@ payload:
   - '+.cloudserver01.com'
   - '+.cloudsgis.com'
   - '+.cloudsohu.net'
-  - '+.cloudstack-china.org'
   - '+.cloudtcp.net'
   - '+.cloudtomicro.com'
   - '+.cloudtopo.com'
@@ -15967,7 +15964,6 @@ payload:
   - '+.cnonline.org'
   - '+.cnookr.com'
   - '+.cnool.net'
-  - '+.cnophol.com'
   - '+.cnops.xyz'
   - '+.cnosr.com'
   - '+.cnoswiki.com'
@@ -22150,7 +22146,6 @@ payload:
   - '+.fengone.com'
   - '+.fengpengjun.com'
   - '+.fengpintech.com'
-  - '+.fengqiyc.com'
   - '+.fengqu.com'
   - '+.fengread.com'
   - '+.fengshangweekly.com'
@@ -22774,7 +22769,6 @@ payload:
   - '+.fqpai.com'
   - '+.fqsszx.com'
   - '+.fqxs.org'
-  - '+.fqzww.com'
   - '+.fr-odc.samsungapps.com'
   - '+.fr-trading.com'
   - '+.fr2007.com'
@@ -22974,6 +22968,7 @@ payload:
   - '+.fulinedu.com'
   - '+.fuling.com'
   - '+.fulingwx.com'
+  - '+.fuliquan.com'
   - '+.fuliti.com'
   - '+.fuliw.net'
   - '+.fuljk.com'
@@ -28490,7 +28485,6 @@ payload:
   - '+.hulai.com'
   - '+.hulamao.com'
   - '+.hulanap.com'
-  - '+.huliangongyu.com'
   - '+.hulianmaibo.com'
   - '+.hulinhong.com'
   - '+.huliqun.com'
@@ -30345,7 +30339,6 @@ payload:
   - '+.internbird.com'
   - '+.internet-dns.com'
   - '+.internet7.vip'
-  - '+.internetcaff.com'
   - '+.internetke.com'
   - '+.internettrademark.com'
   - '+.internetworld.cloud'
@@ -31635,7 +31628,6 @@ payload:
   - '+.jianbing.com'
   - '+.jiancai.com'
   - '+.jianchacha.com'
-  - '+.jianchajingmk.net'
   - '+.jianchihu.net'
   - '+.jiandaima.com'
   - '+.jiandan.net'
@@ -37368,7 +37360,6 @@ payload:
   - '+.luobo360.com'
   - '+.luobocai.com'
   - '+.luobotou.org'
-  - '+.luobowin10.com'
   - '+.luobowin8.com'
   - '+.luoboxia.com'
   - '+.luochen.com'
@@ -38168,7 +38159,6 @@ payload:
   - '+.maro6.com'
   - '+.maroon91.com'
   - '+.marry5.com'
-  - '+.marry80.com'
   - '+.marsfancy.com'
   - '+.marstor.com'
   - '+.marstv.com'
@@ -42510,7 +42500,6 @@ payload:
   - '+.papertime.vip'
   - '+.paperweekly.site'
   - '+.paperword.com'
-  - '+.paperwrite.net'
   - '+.paperyy.com'
   - '+.papocket.com'
   - '+.paquapp.com'
@@ -44930,7 +44919,6 @@ payload:
   - '+.qqyouju.com'
   - '+.qqywf.com'
   - '+.qqyy.com'
-  - '+.qqyyx.com'
   - '+.qqzby.net'
   - '+.qqzhi.com'
   - '+.qqzi.net'
@@ -46671,7 +46659,6 @@ payload:
   - '+.sccm.cc'
   - '+.sccnn.com'
   - '+.sccq.net'
-  - '+.sccsfxdq.com'
   - '+.sccts.com'
   - '+.sccwz.com'
   - '+.scdbzzw.com'
@@ -49730,7 +49717,6 @@ payload:
   - '+.ssso.com'
   - '+.sst-ic.com'
   - '+.sst-sd.com'
-  - '+.ssuu.cc'
   - '+.ssvob.com'
   - '+.sswchina.com'
   - '+.ssxf.net'
@@ -51735,7 +51721,6 @@ payload:
   - '+.tianfeiyu.com'
   - '+.tianfupic.com'
   - '+.tianfusoftwarepark.com'
-  - '+.tianhaohz.com'
   - '+.tianhejiayi.com'
   - '+.tianhongdiaosu.com'
   - '+.tianhongsunshine.com'
@@ -53702,7 +53687,6 @@ payload:
   - '+.union178.com'
   - '+.union400.com'
   - '+.union555.com'
-  - '+.unionclouds.net'
   - '+.unioncyber.net'
   - '+.unionli.com'
   - '+.unionpay.com'
@@ -56735,6 +56719,7 @@ payload:
   - '+.wolongimg.com'
   - '+.wolongyin.com'
   - '+.wolongyoule.com'
+  - '+.wolongzywcdn.com'
   - '+.wolwo.ltd'
   - '+.wolwobiotech.com'
   - '+.womai.com'
@@ -57177,7 +57162,6 @@ payload:
   - '+.wukong.com'
   - '+.wukong.la'
   - '+.wukongapi.com'
-  - '+.wukongchou995.com'
   - '+.wukongkf.com'
   - '+.wukonglicai.com'
   - '+.wukongphp.com'
@@ -62732,7 +62716,6 @@ payload:
   - '+.yushexuetang.com'
   - '+.yushin88.com'
   - '+.yushu5.com'
-  - '+.yushuha.com'
   - '+.yushunews.com'
   - '+.yusi.com'
   - '+.yusi.tv'
@@ -63630,7 +63613,6 @@ payload:
   - '+.zhange8.com'
   - '+.zhangfensir.com'
   - '+.zhanggang.net'
-  - '+.zhanggao.club'
   - '+.zhanggaoyuan.com'
   - '+.zhanggee.com'
   - '+.zhanghaijun.com'
@@ -64362,6 +64344,7 @@ payload:
   - '+.zhuangji.net'
   - '+.zhuangjiba.com'
   - '+.zhuangjiyuan.com'
+  - '+.zhuangkou.com'
   - '+.zhuangku.com'
   - '+.zhuangpeitu.com'
   - '+.zhuangpin.com'
