--- a/directbak.yaml
+++ b/directbak.yaml
@@ -2034,7 +2034,6 @@ payload:
   - '+.2088062.com'
   - '+.2088063.com'
   - '+.208xs.com'
-  - '+.2095114.com'
   - '+.20biquge.com'
   - '+.20ju.com'
   - '+.20qu.com'
@@ -5524,6 +5523,7 @@ payload:
   - '+.6api.net'
   - '+.6apt.com'
   - '+.6b3b.com'
+  - '+.6bdns.com'
   - '+.6c6c.com'
   - '+.6cang.com'
   - '+.6ccn.com'
@@ -5860,7 +5860,6 @@ payload:
   - '+.78hr.com'
   - '+.78oa.com'
   - '+.78pan.com'
-  - '+.78te.com'
   - '+.78tp.com'
   - '+.79.com'
   - '+.793360.com'
@@ -6163,7 +6162,6 @@ payload:
   - '+.82ip.com'
   - '+.82ky.com'
   - '+.82pk.com'
-  - '+.82ucc.com'
   - '+.83133.com'
   - '+.832200.com'
   - '+.8325.com'
@@ -10123,7 +10121,6 @@ payload:
   - '+.baodigs.com'
   - '+.baodingmeishi.com'
   - '+.baodingtrade.com'
-  - '+.baodiwo.net'
   - '+.baodu.com'
   - '+.baofeng.com'
   - '+.baofeng.net'
@@ -13592,7 +13589,6 @@ payload:
   - '+.chachaba.com'
   - '+.chachaqu.com'
   - '+.chachongba.cc'
-  - '+.chachongba.com'
   - '+.chacuo.net'
   - '+.chadan.wang'
   - '+.chadianhua.net'
@@ -14188,7 +14184,6 @@ payload:
   - '+.chinaairer.com'
   - '+.chinaalex.com'
   - '+.chinaamc.com'
-  - '+.chinaamo.com'
   - '+.chinaamuse.com'
   - '+.chinaanonymous.com'
   - '+.chinaar.com'
@@ -18760,7 +18755,6 @@ payload:
   - '+.diqishu.com'
   - '+.diqiujiayuan.com'
   - '+.diqiuw.com'
-  - '+.diqu114.com'
   - '+.diqua.com'
   - '+.dir001.com'
   - '+.directui.com'
@@ -33549,7 +33543,6 @@ payload:
   - '+.jztylxx.com'
   - '+.jztzw.net'
   - '+.jzxs.com'
-  - '+.jzxue.com'
   - '+.jzyx.com'
   - '+.jzzhw.com'
   - '+.jzzx.com'
@@ -37221,7 +37214,6 @@ payload:
   - '+.ltd.com'
   - '+.ltesting.net'
   - '+.ltfwzs.com'
-  - '+.lthack.com'
   - '+.ltimg.net'
   - '+.ltkdj.com'
   - '+.ltmei.com'
@@ -38114,7 +38106,6 @@ payload:
   - '+.mappn.com'
   - '+.maqingxi.com'
   - '+.maqinnews.com'
-  - '+.marakaro.com'
   - '+.mararun.com'
   - '+.marcores.com'
   - '+.marioall.com'
@@ -38523,7 +38514,6 @@ payload:
   - '+.meiquankejih.com'
   - '+.meirenshang.com'
   - '+.meiridazhe.com'
-  - '+.meirishentie.com'
   - '+.meiritv.net'
   - '+.meiriyiwen.com'
   - '+.meirong.net'
@@ -41161,7 +41151,6 @@ payload:
   - '+.nnudream.com'
   - '+.nnwb.com'
   - '+.nnweding.com'
-  - '+.nnylf168.com'
   - '+.nnynrc.com'
   - '+.nnzsxblaw.com'
   - '+.noahedu.com'
@@ -41524,6 +41513,7 @@ payload:
   - '+.oawhy.com'
   - '+.ob-park.com'
   - '+.obagame.com'
+  - '+.obcuntu.com'
   - '+.obesu.com'
   - '+.obins.net'
   - '+.obj6.com'
@@ -45455,7 +45445,6 @@ payload:
   - '+.ratina.org'
   - '+.rationmcu.com'
   - '+.ratodo.com'
-  - '+.ratoo.net'
   - '+.ratuo.com'
   - '+.ray-joy.com'
   - '+.ray8.cc'
@@ -48674,7 +48663,6 @@ payload:
   - '+.sivan.in'
   - '+.sivps.com'
   - '+.siwaman.com'
-  - '+.siwazyw.cc'
   - '+.siwazyw.tv'
   - '+.siwazyw.xyz'
   - '+.siwazywcdn2.com'
@@ -50482,7 +50470,6 @@ payload:
   - '+.syys8.com'
   - '+.syyx.com'
   - '+.syyyking.com'
-  - '+.syzbk42.com'
   - '+.syzlzz.com'
   - '+.syzoukan.com'
   - '+.sz-3a.com'
@@ -52104,7 +52091,6 @@ payload:
   - '+.tltzg.com'
   - '+.tlwok.com'
   - '+.tlyy.cc'
-  - '+.tm12ji.com'
   - '+.tm312.com'
   - '+.tma-001.com'
   - '+.tmabike.com'
@@ -52197,7 +52183,6 @@ payload:
   - '+.tokenglish.com'
   - '+.tokenpocket.pro'
   - '+.tokensky.net'
-  - '+.tokenview.com'
   - '+.tokenworld.pro'
   - '+.tokimekiclub.org'
   - '+.toktok-mall.com'
@@ -58831,7 +58816,6 @@ payload:
   - '+.xinshishen.com'
   - '+.xinshoucun.com'
   - '+.xinshouzhanzhang.com'
-  - '+.xinshula.com'
   - '+.xinshulaile.com'
   - '+.xinshuru.com'
   - '+.xinsilu.com'
@@ -60065,7 +60049,6 @@ payload:
   - '+.xzpoll.com'
   - '+.xzr.kim'
   - '+.xzrj.cc'
-  - '+.xzrjsoft.com'
   - '+.xzsec.com'
   - '+.xzsnw.com'
   - '+.xzstatic.com'
@@ -60634,7 +60617,6 @@ payload:
   - '+.yfdyf.com'
   - '+.yffe.com'
   - '+.yfgj68.com'
-  - '+.yfgyp.com'
   - '+.yfhl.net'
   - '+.yfhxtech.com'
   - '+.yfiot.com'
@@ -63356,7 +63338,6 @@ payload:
   - '+.zg3china.com'
   - '+.zg45.net'
   - '+.zgaxr.com'
-  - '+.zgazxxw.com'
   - '+.zgbenrun.com'
   - '+.zgbigart.com'
   - '+.zgbjyx.com'
@@ -63372,7 +63353,6 @@ payload:
   - '+.zgcbzs.com'
   - '+.zgcdiy.com'
   - '+.zgchawang.com'
-  - '+.zgchawang.net'
   - '+.zgchrx.com'
   - '+.zgcicc.com'
   - '+.zgcindex.org'
@@ -64399,7 +64379,6 @@ payload:
   - '+.zhuixin.cc'
   - '+.zhuixinfan.com'
   - '+.zhuixingwang.com'
-  - '+.zhuixue.net'
   - '+.zhuiyi.ai'
   - '+.zhuizhuiimg.com'
   - '+.zhuizhuiyoyo.com'
@@ -64424,7 +64403,6 @@ payload:
   - '+.zhul.in'
   - '+.zhulang.com'
   - '+.zhulanli.com'
-  - '+.zhuli.me'
   - '+.zhulincat.com'
   - '+.zhuliudai.com'
   - '+.zhulixiaolie.com'
