--- a/anti-ad-clash.yaml
+++ b/anti-ad-clash.yaml
@@ -1,8 +1,8 @@
 payload:
   - DOMAIN-SUFFIX,#TITLE=anti-AD
-  - DOMAIN-SUFFIX,#VER=20220729024638
+  - DOMAIN-SUFFIX,#VER=20220730220543
   - DOMAIN-SUFFIX,#URL=https://github.com/privacy-protection-tools/anti-AD
-  - DOMAIN-SUFFIX,#TOTAL_LINES=61595
+  - DOMAIN-SUFFIX,#TOTAL_LINES=61596
   - DOMAIN-SUFFIX,000123456789.online
   - DOMAIN-SUFFIX,000123456789.site
   - DOMAIN-SUFFIX,000123456789.space
@@ -19804,6 +19804,7 @@ payload:
   - DOMAIN-SUFFIX,enthusiasticring.com
   - DOMAIN-SUFFIX,enthusiasticsabotage.com
   - DOMAIN-SUFFIX,enticelabs.com
+  - DOMAIN-SUFFIX,entirelysacrament.com
   - DOMAIN-SUFFIX,sa.entireweb.com
   - DOMAIN-SUFFIX,entmassaul.com
   - DOMAIN-SUFFIX,entmatchw.top
@@ -29233,7 +29234,6 @@ payload:
   - DOMAIN-SUFFIX,jiliw.com
   - DOMAIN-SUFFIX,2mg.jim86d.cn
   - DOMAIN-SUFFIX,2mg898.jim86d.cn
-  - DOMAIN-SUFFIX,jimdo.com
   - DOMAIN-SUFFIX,s.jimdo.com
   - DOMAIN-SUFFIX,u.jimdo.com
   - DOMAIN-SUFFIX,jimeilm.com
@@ -50048,6 +50048,7 @@ payload:
   - DOMAIN-SUFFIX,xs.swagger1.com
   - DOMAIN-SUFFIX,swagtraffcom.com
   - DOMAIN-SUFFIX,swailsmenison.com
+  - DOMAIN-SUFFIX,swallowcrockerybless.com
   - DOMAIN-SUFFIX,swan-swan-goose.com
   - DOMAIN-SUFFIX,zybveu.swappie.com
   - DOMAIN-SUFFIX,ybswii.swarovski.com
