--- a/directbak.yaml
+++ b/directbak.yaml
@@ -2842,6 +2842,7 @@ payload:
   - '+.35pn.com'
   - '+.35q.com'
   - '+.35rc.com'
+  - '+.35wed.com'
   - '+.35zww.com'
   - '+.36.la'
   - '+.360-bo.tv'
@@ -5780,6 +5781,7 @@ payload:
   - '+.7794.com'
   - '+.77991.com'
   - '+.7799520.com'
+  - '+.779wan.com'
   - '+.77acg.com'
   - '+.77bx.com'
   - '+.77ds.com'
@@ -7033,6 +7035,7 @@ payload:
   - '+.9908qhb.com'
   - '+.99114.com'
   - '+.99118.com'
+  - '+.9911yx.com'
   - '+.99166.com'
   - '+.9917.com'
   - '+.9918.tv'
@@ -7193,6 +7196,7 @@ payload:
   - '+.9hcom.com'
   - '+.9he.com'
   - '+.9host.org'
+  - '+.9hou.com'
   - '+.9ht.com'
   - '+.9icode.net'
   - '+.9icy.com'
@@ -9912,7 +9916,6 @@ payload:
   - '+.baiyi181.com'
   - '+.baiyiba.com'
   - '+.baiyinggd.com'
-  - '+.baiyingtx.com'
   - '+.baiyjk.com'
   - '+.baiyou100.com'
   - '+.baiyouo.com'
@@ -12075,7 +12078,6 @@ payload:
   - '+.bugutime.com'
   - '+.bugwz.com'
   - '+.bugxia.com'
-  - '+.buhuiwan.com'
   - '+.buhuyo.com'
   - '+.build-decor.com'
   - '+.buildface.com'
@@ -12121,7 +12123,6 @@ payload:
   - '+.busytrade.com'
   - '+.but7.com'
   - '+.butair.com'
-  - '+.buterp.com'
   - '+.butongshe.com'
   - '+.butonly.com'
   - '+.butterapis.com'
@@ -17904,6 +17905,7 @@ payload:
   - '+.daztoutiao.com'
   - '+.dazui.com'
   - '+.db-cache.com'
+  - '+.db9x.com'
   - '+.dbank.com'
   - '+.dbankcdn.com'
   - '+.dbankcloud.asia'
@@ -19237,7 +19239,6 @@ payload:
   - '+.doraunion.com'
   - '+.dormforce.net'
   - '+.dorrr.com'
-  - '+.dortail.com'
   - '+.doseeing.com'
   - '+.doserv.com'
   - '+.doshome.com'
@@ -19621,7 +19622,6 @@ payload:
   - '+.dui9999.com'
   - '+.duia.com'
   - '+.duiai.com'
-  - '+.duianba.com'
   - '+.duihuan123.com'
   - '+.duihuashijie.com'
   - '+.duikuang.com'
@@ -23578,6 +23578,7 @@ payload:
   - '+.gdscse.net'
   - '+.gdscw.com'
   - '+.gdsincom.com'
+  - '+.gdslwl.com'
   - '+.gdsoq.com'
   - '+.gdsports.net'
   - '+.gdsrcw.com'
@@ -24612,7 +24613,6 @@ payload:
   - '+.gsxservice.com'
   - '+.gsxtj.com'
   - '+.gsxzq.com'
-  - '+.gsyuanquan.com'
   - '+.gszhuli.com'
   - '+.gszlyy.com'
   - '+.gszph.com'
@@ -24789,7 +24789,6 @@ payload:
   - '+.gudi.cc'
   - '+.gudianhr.com'
   - '+.guduodata.com'
-  - '+.guer.org'
   - '+.guestops.com'
   - '+.gufengmh.com'
   - '+.gufengmh8.com'
@@ -24933,7 +24932,6 @@ payload:
   - '+.guoyanni.com'
   - '+.guoyi360.com'
   - '+.guoyice.com'
-  - '+.guoyitangtt.com'
   - '+.guoyu.com'
   - '+.guozaoke.com'
   - '+.guozh.net'
@@ -25665,7 +25663,6 @@ payload:
   - '+.hanlei.org'
   - '+.hanmadiancan.com'
   - '+.hanmaker.com'
-  - '+.hanmanapp.com'
   - '+.hanmanzj.co'
   - '+.hanmeilin.com'
   - '+.hanmi520.com'
@@ -28954,7 +28951,6 @@ payload:
   - '+.i11r.com'
   - '+.i121.net'
   - '+.i1515.com'
-  - '+.i1758.com'
   - '+.i1766.com'
   - '+.i2abc.com'
   - '+.i2ya.com'
@@ -29961,7 +29957,6 @@ payload:
   - '+.imgshangman.com'
   - '+.imgsina.com'
   - '+.imgtg.com'
-  - '+.imgtp.com'
   - '+.imgtu.com'
   - '+.imgu.cc'
   - '+.imgurl.org'
@@ -31068,7 +31063,6 @@ payload:
   - '+.jajqj.com'
   - '+.jakegame.com'
   - '+.jakehu.me'
-  - '+.jalan.space'
   - '+.jalorsoft.com'
   - '+.jamidol.com'
   - '+.jammyfm.com'
@@ -32028,7 +32022,6 @@ payload:
   - '+.jinlianchu.com'
   - '+.jinligou.com'
   - '+.jinlijzbd.com'
-  - '+.jinlila.com'
   - '+.jinlinghotel.com'
   - '+.jinlinghotels.com'
   - '+.jinliniuan.com'
@@ -35282,7 +35275,6 @@ payload:
   - '+.laozu.com'
   - '+.laozuo.org'
   - '+.lapin365.com'
-  - '+.lapland.name'
   - '+.laqiangu.com'
   - '+.laravel-admin.org'
   - '+.laravelacademy.org'
@@ -36444,6 +36436,7 @@ payload:
   - '+.liumapp.com'
   - '+.liumeinet.com'
   - '+.liumh.com'
+  - '+.liumuzulin.com'
   - '+.liumwei.org'
   - '+.liumx.com'
   - '+.liunews.com'
@@ -46529,9 +46522,7 @@ payload:
   - '+.scdzmw.com'
   - '+.scedu.net'
   - '+.sceeo.com'
-  - '+.scfaying.com'
   - '+.scflcp.com'
-  - '+.scflgc.com'
   - '+.scfzbs.com'
   - '+.scgc.net'
   - '+.scgckj.com'
@@ -47991,7 +47982,6 @@ payload:
   - '+.shuadanfu.com'
   - '+.shuai.win'
   - '+.shuaibo.wang'
-  - '+.shuaigay.com'
   - '+.shuaigay6.com'
   - '+.shuaigeshe.com'
   - '+.shuaihuajun.com'
@@ -49223,7 +49213,6 @@ payload:
   - '+.sosotec.com'
   - '+.sosotirp.com'
   - '+.sosowenwen.com'
-  - '+.sosoxian.com'
   - '+.sosoyunpan.com'
   - '+.sosoyy.com'
   - '+.sosuo.name'
@@ -52766,7 +52755,6 @@ payload:
   - '+.tuipink.com'
   - '+.tuiplay.com'
   - '+.tuipony.com'
-  - '+.tuiq.net'
   - '+.tuirabbit.com'
   - '+.tuirice.com'
   - '+.tuishao.net'
@@ -53117,7 +53105,6 @@ payload:
   - '+.tz12306.com'
   - '+.tz1288.com'
   - '+.tz1980.com'
-  - '+.tz8.com'
   - '+.tz887.com'
   - '+.tz911.com'
   - '+.tzbank.com'
@@ -53349,7 +53336,6 @@ payload:
   - '+.ugbb.com'
   - '+.ugcar.com'
   - '+.ugdtimg.com'
-  - '+.ugediao.com'
   - '+.uggas.com'
   - '+.uggd.com'
   - '+.ugirls.tv'
@@ -54715,6 +54701,7 @@ payload:
   - '+.wan73.com'
   - '+.wan77.com'
   - '+.wan8.com'
+  - '+.wan898.com'
   - '+.wan95.com'
   - '+.wanbang365.com'
   - '+.wanbaoju.com'
@@ -56134,7 +56121,6 @@ payload:
   - '+.win1032.com'
   - '+.win1064.com'
   - '+.win10cjb.com'
-  - '+.win10com.com'
   - '+.win10gw.com'
   - '+.win10net.com'
   - '+.win10set.com'
@@ -59903,7 +59889,6 @@ payload:
   - '+.xzhichang.com'
   - '+.xzhizao.com'
   - '+.xzji.com'
-  - '+.xzjqx.date'
   - '+.xzjxtsg.com'
   - '+.xzkd.com'
   - '+.xzking.com'
@@ -60173,7 +60158,6 @@ payload:
   - '+.yaoying.vip'
   - '+.yaoyl.com'
   - '+.yaoyouke.com'
-  - '+.yaoyuan.com'
   - '+.yaoyuanba.com'
   - '+.yaozh.com'
   - '+.yaozs.com'
@@ -62093,7 +62077,6 @@ payload:
   - '+.yuchen360.com'
   - '+.yucheng0769.net'
   - '+.yuchengwang.com'
-  - '+.yuchenjf.com'
   - '+.yuchenw.com'
   - '+.yuchk.com'
   - '+.yuchu3d.com'
@@ -62974,7 +62957,6 @@ payload:
   - '+.zbgl.net'
   - '+.zbgscm.com'
   - '+.zbhouse.com'
-  - '+.zbii.com'
   - '+.zbintel.com'
   - '+.zbird.com'
   - '+.zbj.com'
