--- a/directbak.yaml
+++ b/directbak.yaml
@@ -2816,6 +2816,7 @@ payload:
   - '+.3525.com'
   - '+.35321.com'
   - '+.3533.com'
+  - '+.354054.com'
   - '+.3551.com'
   - '+.355xx.com'
   - '+.356123.com'
@@ -6488,7 +6489,6 @@ payload:
   - '+.90e.com'
   - '+.90ko.net'
   - '+.90lhd.com'
-  - '+.90pan.com'
   - '+.90qh.com'
   - '+.90sheji.com'
   - '+.90sjimg.com'
@@ -11088,7 +11088,6 @@ payload:
   - '+.bitautoimg.com'
   - '+.bitautotech.com'
   - '+.bitbank.com'
-  - '+.bitbays.com'
   - '+.bitbili.net'
   - '+.bitbug.net'
   - '+.bitcellulose.com'
@@ -11841,7 +11840,6 @@ payload:
   - '+.botongr.com'
   - '+.botorange.com'
   - '+.botslab.com'
-  - '+.bottos.org'
   - '+.bouffalolab.com'
   - '+.boweifeng.com'
   - '+.bowerp.com'
@@ -12120,6 +12118,7 @@ payload:
   - '+.busiphi.com'
   - '+.busiyi888.com'
   - '+.busnc.com'
+  - '+.busvifi.com'
   - '+.busytrade.com'
   - '+.but7.com'
   - '+.butair.com'
@@ -12229,6 +12228,7 @@ payload:
   - '+.bygjhb.com'
   - '+.bygw.net'
   - '+.byhard.com'
+  - '+.byhlds.net'
   - '+.byhua.com'
   - '+.byi.pw'
   - '+.byjdxy.com'
@@ -13784,7 +13784,6 @@ payload:
   - '+.checheboke.com'
   - '+.chechong.com'
   - '+.check.cc'
-  - '+.checkip.biz'
   - '+.checkip.pw'
   - '+.checkoo.com'
   - '+.checkpass.net'
@@ -16261,6 +16260,7 @@ payload:
   - '+.com4loves.com'
   - '+.comac.cc'
   - '+.comba.xyz'
+  - '+.combofin.com'
   - '+.combomen.com'
   - '+.combpm.com'
   - '+.combss.com'
@@ -16835,7 +16835,6 @@ payload:
   - '+.cshufanyi.com'
   - '+.cshxdc.com'
   - '+.cshzw.com'
-  - '+.csiaexpo.com'
   - '+.csic-711.com'
   - '+.csic-ljtech.com'
   - '+.csic612.com'
@@ -20691,6 +20690,7 @@ payload:
   - '+.eketong.com'
   - '+.ekuaibao.com'
   - '+.elabinfo.com'
+  - '+.elane.com'
   - '+.elanso.com'
   - '+.elanw.com'
   - '+.elbmodel.com'
@@ -21836,7 +21836,6 @@ payload:
   - '+.fcchbj.com'
   - '+.fccs.com'
   - '+.fcczp.com'
-  - '+.fcg51.com'
   - '+.fcgsnews.com'
   - '+.fcgtt.com'
   - '+.fcheche.com'
@@ -22392,7 +22391,6 @@ payload:
   - '+.fkw.com'
   - '+.fkw100.com'
   - '+.fkxs.net'
-  - '+.fkxxyz.com'
   - '+.fkyuer.com'
   - '+.fkyun.com'
   - '+.fkzgz.com'
@@ -23921,6 +23919,7 @@ payload:
   - '+.gimhoy.com'
   - '+.gimmgimm.com'
   - '+.gimoo.net'
+  - '+.ginshio.org'
   - '+.gio.ren'
   - '+.giocdn.com'
   - '+.gionee.com'
@@ -25017,7 +25016,6 @@ payload:
   - '+.gxaedu.com'
   - '+.gxaj.com'
   - '+.gxar.com'
-  - '+.gxb.io'
   - '+.gxb2b.net'
   - '+.gxbaidutg.com'
   - '+.gxbf.net'
@@ -25584,6 +25582,7 @@ payload:
   - '+.haizhuyx.com'
   - '+.haizitong.com'
   - '+.haizol.com'
+  - '+.hakaimg.com'
   - '+.haku77.com'
   - '+.halade.com'
   - '+.halaha.com'
@@ -25663,11 +25662,9 @@ payload:
   - '+.hanlei.org'
   - '+.hanmadiancan.com'
   - '+.hanmaker.com'
-  - '+.hanmanzj.co'
   - '+.hanmeilin.com'
   - '+.hanmi520.com'
   - '+.hannor.com'
-  - '+.hanqiweb.co'
   - '+.hanqiweb.com'
   - '+.hanqiweb.net'
   - '+.hanqiweb.red'
@@ -26029,7 +26026,6 @@ payload:
   - '+.hatdot.com'
   - '+.hatfav.com'
   - '+.hatlonely.com'
-  - '+.hatm.vip'
   - '+.hatoem.com'
   - '+.haval-global.com'
   - '+.have.ink'
@@ -27717,6 +27713,7 @@ payload:
   - '+.hrhy365.com'
   - '+.hrintl.com.hk'
   - '+.hrloo.com'
+  - '+.hrltw.com'
   - '+.hrm100.com'
   - '+.hrmarket.net'
   - '+.hroot.co'
@@ -28001,6 +27998,7 @@ payload:
   - '+.huanggaofang.com'
   - '+.huangh.com'
   - '+.huanghaicollege.com'
+  - '+.huanghaiting.com'
   - '+.huanghanlian.com'
   - '+.huanghepiao.com'
   - '+.huanghouyz.com'
@@ -28699,6 +28697,7 @@ payload:
   - '+.hxytw.com'
   - '+.hxyxsj.com'
   - '+.hxzdhn.com'
+  - '+.hxzs31.com'
   - '+.hy-la.com'
   - '+.hy-zr.com'
   - '+.hy01888.com'
@@ -29346,6 +29345,7 @@ payload:
   - '+.idcjf.com'
   - '+.idcjia.net'
   - '+.idckx.com'
+  - '+.idcloudbase.com'
   - '+.idcoffer.com'
   - '+.idcquan.com'
   - '+.idcsec.com'
@@ -31116,7 +31116,6 @@ payload:
   - '+.jayfu.tk'
   - '+.jayjw.com'
   - '+.jayme.net'
-  - '+.jaytrn.com'
   - '+.jazzyear.com'
   - '+.jb1000.com'
   - '+.jb51.cc'
@@ -31474,7 +31473,6 @@ payload:
   - '+.jiajianhudong.com'
   - '+.jiajiao114.com'
   - '+.jiajiaoban.com'
-  - '+.jiaju-hy.com'
   - '+.jiaju.cc'
   - '+.jiaju.com'
   - '+.jiaju100.com'
@@ -31517,7 +31515,6 @@ payload:
   - '+.jianchihu.net'
   - '+.jiandaima.com'
   - '+.jiandan.net'
-  - '+.jiandana.com'
   - '+.jiandansousuo.com'
   - '+.jiandanxinli.com'
   - '+.jiandaopay.com'
@@ -34466,7 +34463,6 @@ payload:
   - '+.krdlw.com'
   - '+.krdrama.com'
   - '+.kriszhang.com'
-  - '+.krjkkj.com'
   - '+.krpano.tech'
   - '+.krshadow.com'
   - '+.krszf.com'
@@ -35277,6 +35273,7 @@ payload:
   - '+.lapin365.com'
   - '+.laqiangu.com'
   - '+.laravel-admin.org'
+  - '+.laravel-china.org'
   - '+.laravelacademy.org'
   - '+.larenla.com'
   - '+.large.net'
@@ -35832,6 +35829,7 @@ payload:
   - '+.lhy2.xyz'
   - '+.lhy3.xyz'
   - '+.lhy4.xyz'
+  - '+.lhyiliao.com'
   - '+.lhzq.com'
   - '+.li-ca.com'
   - '+.li-ning.com'
@@ -36811,6 +36809,7 @@ payload:
   - '+.longdezhu.com'
   - '+.longdian.com'
   - '+.longdoer.com'
+  - '+.longfajr.com'
   - '+.longfor.com'
   - '+.longfu360.com'
   - '+.longger.net'
@@ -38035,7 +38034,6 @@ payload:
   - '+.masadora.net'
   - '+.masamaso.com'
   - '+.mascaw.com'
-  - '+.masdiy.com'
   - '+.masdjy.com'
   - '+.masej.com'
   - '+.mashang98.com'
@@ -38347,7 +38345,6 @@ payload:
   - '+.meijiaedu.com'
   - '+.meijiahuanxin.com'
   - '+.meijialove.com'
-  - '+.meijiecao.net'
   - '+.meijiedaka.com'
   - '+.meijiehang.com'
   - '+.meijiehezi.com'
@@ -41360,6 +41357,7 @@ payload:
   - '+.nysmfc.com'
   - '+.nyyzjg.com'
   - '+.nz86.com'
+  - '+.nz998.com'
   - '+.nzbdw.com'
   - '+.nzchina.com'
   - '+.nzsiteres.com'
@@ -41969,7 +41967,6 @@ payload:
   - '+.ottshopping.net'
   - '+.otype.com'
   - '+.ou99.com'
-  - '+.ouancm.ga'
   - '+.ouapi.com'
   - '+.oubk.com'
   - '+.ouchgzee.com'
@@ -45373,6 +45370,7 @@ payload:
   - '+.rcw0375.com'
   - '+.rcwl.net'
   - '+.rcyd.net'
+  - '+.rcyxdk.com'
   - '+.rczfang.com'
   - '+.rczp.org'
   - '+.rd-game.com'
@@ -45770,6 +45768,7 @@ payload:
   - '+.rlbl888.com'
   - '+.rlhn.xyz'
   - '+.rlkj.com'
+  - '+.rlkj.net'
   - '+.rlsofa.net'
   - '+.rlwyjf.com'
   - '+.rlydw.com'
@@ -52031,6 +52030,7 @@ payload:
   - '+.todesk.com'
   - '+.todoen.com'
   - '+.todokeji.com'
+  - '+.todokit.xyz'
   - '+.todonow.com'
   - '+.todosomeone.com'
   - '+.toec-gdgs.com'
@@ -53391,7 +53391,6 @@ payload:
   - '+.uiste.com'
   - '+.uiu.cc'
   - '+.uiusc.com'
-  - '+.uiwed.com'
   - '+.ujakn.com'
   - '+.ujia007.com'
   - '+.ujian.cc'
@@ -53738,6 +53737,7 @@ payload:
   - '+.utourworld.com'
   - '+.utovr.com'
   - '+.utransm.com'
+  - '+.uttjhu.xyz'
   - '+.uu.cc'
   - '+.uu.me'
   - '+.uu1.com'
@@ -55325,7 +55325,6 @@ payload:
   - '+.weikasen.com'
   - '+.weikd.com'
   - '+.weike.fm'
-  - '+.weikeam.com'
   - '+.weikebaba.net'
   - '+.weikeimg.com'
   - '+.weikejianghu.com'
@@ -56538,6 +56537,7 @@ payload:
   - '+.wolongyin.com'
   - '+.wolongyoule.com'
   - '+.wolongzywcdn.com'
+  - '+.wolongzywcdn2.com'
   - '+.wolwo.ltd'
   - '+.wolwobiotech.com'
   - '+.womai.com'
@@ -56578,6 +56578,7 @@ payload:
   - '+.wonote.com'
   - '+.wonpearl.com'
   - '+.wonplug.net'
+  - '+.wonse.info'
   - '+.wonxun.net'
   - '+.woo.im'
   - '+.wooaii.com'
@@ -56900,7 +56901,6 @@ payload:
   - '+.wudangshan.com'
   - '+.wudao.com'
   - '+.wudaotv.com'
-  - '+.wudku.com'
   - '+.wueasy.com'
   - '+.wuerys.com'
   - '+.wufafuwu.com'
@@ -58177,7 +58177,6 @@ payload:
   - '+.xiaoshuoli.com'
   - '+.xiaoshuoshu.org'
   - '+.xiaoshuotxt.com'
-  - '+.xiaoshuoyd.com'
   - '+.xiaoshuozu.com'
   - '+.xiaoshuwu.vip'
   - '+.xiaoshuxiong.com'
@@ -59762,7 +59761,6 @@ payload:
   - '+.xy178.com'
   - '+.xy1989.com'
   - '+.xy3000.com'
-  - '+.xy48.net'
   - '+.xy58.net'
   - '+.xy599.com'
   - '+.xy78.com'
@@ -64897,6 +64895,7 @@ payload:
   - '+.zonen-tech.com'
   - '+.zonepp.com'
   - '+.zoneve.com'
+  - '+.zongft.com'
   - '+.zonghangsl.com'
   - '+.zongheng.com'
   - '+.zongheng001.com'
