--- a/directbak.yaml
+++ b/directbak.yaml
@@ -114,7 +114,6 @@ payload:
   - '+.01tao.com'
   - '+.01teacher.com'
   - '+.01tingshu.com'
-  - '+.01ue.com'
   - '+.01w.com'
   - '+.01water.com'
   - '+.01wb.com'
@@ -465,7 +464,6 @@ payload:
   - '+.068632.com'
   - '+.06abc.com'
   - '+.06climate.com'
-  - '+.06dns.com'
   - '+.06game.com'
   - '+.06peng.com'
   - '+.07.la'
@@ -538,7 +536,6 @@ payload:
   - '+.0755car.com'
   - '+.0755haoyu.com'
   - '+.0755hz.com'
-  - '+.0755pr.com'
   - '+.0755rc.com'
   - '+.0755si.com'
   - '+.0755ws.com'
@@ -1429,7 +1426,6 @@ payload:
   - '+.168tea.com'
   - '+.168tex.com'
   - '+.168tochina.com'
-  - '+.168w.cc'
   - '+.168yyzj.com'
   - '+.168zcw.com'
   - '+.169.com'
@@ -2408,7 +2404,6 @@ payload:
   - '+.27dt.com'
   - '+.27dy.com'
   - '+.27dyy.com'
-  - '+.27k.cc'
   - '+.27l.com'
   - '+.27lmfq.com'
   - '+.27lvpai.com'
@@ -2598,7 +2593,6 @@ payload:
   - '+.3145.com'
   - '+.314pay.com'
   - '+.3150315.com'
-  - '+.315034.com'
   - '+.3158.com'
   - '+.315banzhao.com'
   - '+.315che.com'
@@ -3709,7 +3703,6 @@ payload:
   - '+.50zw.co'
   - '+.50zw.com'
   - '+.50zw.la'
-  - '+.50zww.net'
   - '+.51-cf.com'
   - '+.51-jia.com'
   - '+.51-n.com'
@@ -4739,7 +4732,6 @@ payload:
   - '+.560.im'
   - '+.56015.com'
   - '+.560la.com'
-  - '+.560xs.com'
   - '+.5611.com'
   - '+.56135.com'
   - '+.5617.com'
@@ -4814,7 +4806,6 @@ payload:
   - '+.579609.com'
   - '+.57ac.com'
   - '+.57auto.com'
-  - '+.57dj.com'
   - '+.57dp.com'
   - '+.57ee.net'
   - '+.57fx.com'
@@ -5951,7 +5942,6 @@ payload:
   - '+.7road.net'
   - '+.7runto.com'
   - '+.7rv.net'
-  - '+.7sbook.com'
   - '+.7scs.com'
   - '+.7sdn.com'
   - '+.7sheji.com'
@@ -6059,7 +6049,6 @@ payload:
   - '+.80nb.com'
   - '+.80note.com'
   - '+.80paper.com'
-  - '+.80s.cm'
   - '+.80s.im'
   - '+.80s.so'
   - '+.80s.tw'
@@ -6124,7 +6113,6 @@ payload:
   - '+.8234567.com'
   - '+.8246.net'
   - '+.8264.com'
-  - '+.826rc.com'
   - '+.826wan.com'
   - '+.82859.com'
   - '+.82871.com'
@@ -7337,7 +7325,6 @@ payload:
   - '+.aads-cng.net'
   - '+.aamachina.org'
   - '+.aaniao.com'
-  - '+.aapy38.com'
   - '+.aaqqw.com'
   - '+.aarch64.me'
   - '+.aardio.com'
@@ -7403,7 +7390,6 @@ payload:
   - '+.aboatedu.com'
   - '+.aboboo.com'
   - '+.aboilgame.com'
-  - '+.aboluojihua.com'
   - '+.aboutcg.com'
   - '+.aboutcg.net'
   - '+.aboutcg.org'
@@ -7584,7 +7570,6 @@ payload:
   - '+.adjuz.com'
   - '+.adkwai.com'
   - '+.adl888.com'
-  - '+.adl999.com'
   - '+.adlefee.com'
   - '+.adlefei.com'
   - '+.adluckin.com'
@@ -9964,7 +9949,6 @@ payload:
   - '+.bananaunder.com'
   - '+.banbaise.com'
   - '+.banbaowang.com'
-  - '+.banbf.com'
   - '+.banciyuan.me'
   - '+.bandaoapp.com'
   - '+.bandari.net'
@@ -10005,7 +9989,6 @@ payload:
   - '+.bangyike.com'
   - '+.bangzechem.com'
   - '+.bangzhufu.com'
-  - '+.banht.com'
   - '+.banjiajia.com'
   - '+.banjiamao.com'
   - '+.banjixiaoguanjia.com'
@@ -10466,7 +10449,6 @@ payload:
   - '+.behake.com'
   - '+.behe.com'
   - '+.bei1688.com'
-  - '+.beian88.com'
   - '+.beianapi29.com'
   - '+.beianapi30.com'
   - '+.beianidc.com'
@@ -10610,7 +10592,6 @@ payload:
   - '+.berqin.com'
   - '+.berrl.com'
   - '+.berrydigi.com'
-  - '+.berryol.com'
   - '+.bersella-ai.cc'
   - '+.berui.com'
   - '+.bes.ren'
@@ -11942,7 +11923,6 @@ payload:
   - '+.bscstorage.net'
   - '+.bsd4fz.com'
   - '+.bsdgco.com'
-  - '+.bseas.com'
   - '+.bsgcnc.com'
   - '+.bsgslb.com'
   - '+.bsh-tech.com'
@@ -12228,6 +12208,7 @@ payload:
   - '+.bygjhb.com'
   - '+.bygw.net'
   - '+.byhard.com'
+  - '+.byhlds.com'
   - '+.byhlds.net'
   - '+.byhua.com'
   - '+.byi.pw'
@@ -12512,7 +12493,6 @@ payload:
   - '+.cailiaoren.com'
   - '+.cailol.com'
   - '+.cailutong.com'
-  - '+.cailuw.com'
   - '+.caimai.cc'
   - '+.caimei365.com'
   - '+.caimogu.net'
@@ -13059,7 +13039,6 @@ payload:
   - '+.ccyunmai.com'
   - '+.ccyyls.com'
   - '+.ccziben.com'
-  - '+.cczihai.com'
   - '+.ccztv.com'
   - '+.cd-cxh.com'
   - '+.cd-kc.com'
@@ -17208,7 +17187,6 @@ payload:
   - '+.cycnet.com'
   - '+.cycoi.com'
   - '+.cycoo.com'
-  - '+.cycyuan.com'
   - '+.cydf.com'
   - '+.cydiakk.com'
   - '+.cydiami.com'
@@ -18242,7 +18220,6 @@ payload:
   - '+.devsiki.com'
   - '+.devtang.com'
   - '+.devzeng.com'
-  - '+.devzhang.com'
   - '+.dewmobile.net'
   - '+.dewu.com'
   - '+.dewumall.com'
@@ -18960,7 +18937,6 @@ payload:
   - '+.dngz.net'
   - '+.dnion.com'
   - '+.dnjishu.com'
-  - '+.dnjs8.com'
   - '+.dnjsb.com'
   - '+.dnmall.com'
   - '+.dnnskin.net'
@@ -19454,6 +19430,7 @@ payload:
   - '+.drcuiyutao.com'
   - '+.drdrq.com'
   - '+.dre8.com'
+  - '+.dream-loft.com'
   - '+.dream.ren'
   - '+.dream1986.com'
   - '+.dreamad.mobi'
@@ -22876,7 +22853,6 @@ payload:
   - '+.fuliao.com'
   - '+.fuliapps.com'
   - '+.fuliba2020.net'
-  - '+.fuliba2021.net'
   - '+.fulibbs.com'
   - '+.fulibest.com'
   - '+.fulijd.com'
@@ -23088,7 +23064,6 @@ payload:
   - '+.fyyljkgl.com'
   - '+.fyyy.com'
   - '+.fyzku.com'
-  - '+.fz0512.com'
   - '+.fz222.com'
   - '+.fz2sc.com'
   - '+.fz597.com'
@@ -24300,7 +24275,6 @@ payload:
   - '+.gongyishibao.com'
   - '+.gongyixiang.com'
   - '+.gongyoumishu.com'
-  - '+.gongzhonghaozhushou.com'
   - '+.gongzi.org'
   - '+.gongzicp.com'
   - '+.gongzifu.com'
@@ -27166,7 +27140,6 @@ payload:
   - '+.hmecw.com'
   - '+.hmgj.com'
   - '+.hminvestment.com'
-  - '+.hmjiayi.com'
   - '+.hmlan.com'
   - '+.hmltec.com'
   - '+.hmnst.com'
@@ -29167,7 +29140,6 @@ payload:
   - '+.icekylin.online'
   - '+.icemle.org'
   - '+.icepie.net'
-  - '+.iceshi.org'
   - '+.icesimba.com'
   - '+.icevpn.org'
   - '+.icewingcc.com'
@@ -31047,8 +31019,6 @@ payload:
   - '+.jaadee.com'
   - '+.jaadee.net'
   - '+.jabizb.com'
-  - '+.jacklm2.com'
-  - '+.jacklm3.com'
   - '+.jackon.me'
   - '+.jackxiang.com'
   - '+.jacky-blog.com'
@@ -31948,7 +31918,6 @@ payload:
   - '+.jingpai.com'
   - '+.jingpaidang.com'
   - '+.jingpinke.com'
-  - '+.jingpinwenku.com'
   - '+.jingpt.com'
   - '+.jingrongshuan.com'
   - '+.jingruigroup.com'
@@ -31990,6 +31959,7 @@ payload:
   - '+.jingyuyun.com'
   - '+.jingzhe.me'
   - '+.jingzhengu.com'
+  - '+.jingzhusz.com'
   - '+.jingzong.org'
   - '+.jinhaidai.com'
   - '+.jinhe-energy.com'
@@ -36427,7 +36397,6 @@ payload:
   - '+.liulianyu.com'
   - '+.liuliguo.com'
   - '+.liulin.cc'
-  - '+.liulinblog.com'
   - '+.liulishuo.com'
   - '+.liulishuo.work'
   - '+.liulv.net'
@@ -36625,13 +36594,11 @@ payload:
   - '+.lm213.com'
   - '+.lm284.com'
   - '+.lm335.com'
-  - '+.lm343.com'
   - '+.lm553.com'
   - '+.lm685.com'
   - '+.lm811.com'
   - '+.lm832.com'
   - '+.lm865.com'
-  - '+.lm995.com'
   - '+.lm9999.com'
   - '+.lmacc.com'
   - '+.lmanmo.com'
@@ -36855,7 +36822,6 @@ payload:
   - '+.longtugame.com'
   - '+.longtuohy.com'
   - '+.longu.com'
-  - '+.longwang.cc'
   - '+.longwanshijia.com'
   - '+.longwenedu.com'
   - '+.longwiki.org'
@@ -39636,7 +39602,6 @@ payload:
   - '+.mpxx.net'
   - '+.mqant.com'
   - '+.mqcoffee.com'
-  - '+.mqego.com'
   - '+.mquanquan.com'
   - '+.mqxww.com'
   - '+.mr-ping.com'
@@ -40311,7 +40276,6 @@ payload:
   - '+.nanshanski.com'
   - '+.nanshifaxing.com'
   - '+.nantaihu.com'
-  - '+.nantongbike.com'
   - '+.nantonghua.net'
   - '+.nanxueqx.com'
   - '+.nanxunjob.com'
@@ -40463,7 +40427,6 @@ payload:
   - '+.ndser.net'
   - '+.nduoa.com'
   - '+.nduotuan.com'
-  - '+.ndvs87d.com'
   - '+.ndzsx.com'
   - '+.ne21.com'
   - '+.neaechina.com'
@@ -41552,7 +41515,6 @@ payload:
   - '+.okbike.net'
   - '+.okbmf.com'
   - '+.okbuy.com'
-  - '+.okbuycdn.com'
   - '+.okcard.com'
   - '+.okchang.com'
   - '+.okchexian.com'
@@ -42504,7 +42466,6 @@ payload:
   - '+.pdim.gs'
   - '+.pdm.so'
   - '+.pdosgk.com'
-  - '+.pdown.org'
   - '+.pdrcfw.com'
   - '+.pdreading.com'
   - '+.pdryx.com'
@@ -43071,7 +43032,6 @@ payload:
   - '+.plqdf.com'
   - '+.plsadx.com'
   - '+.plsmspx.com'
-  - '+.plsub.com'
   - '+.pluosi.com'
   - '+.plures.net'
   - '+.plusgantt.com'
@@ -43949,7 +43909,6 @@ payload:
   - '+.qiandw.com'
   - '+.qianfan123.com'
   - '+.qianfan365.com'
-  - '+.qianfangzy.com'
   - '+.qianfanyun.com'
   - '+.qiang100.com'
   - '+.qiangchezu.com'
@@ -44500,7 +44459,6 @@ payload:
   - '+.qjherb.com'
   - '+.qjhlw.com'
   - '+.qjhm.net'
-  - '+.qji.cc'
   - '+.qjimage.com'
   - '+.qjkc.net'
   - '+.qjmotor.com'
@@ -44606,7 +44564,6 @@ payload:
   - '+.qp110.com'
   - '+.qp46.com'
   - '+.qp832.com'
-  - '+.qp8u.com'
   - '+.qpb187.com'
   - '+.qpdiy.com'
   - '+.qpgame.com'
@@ -44893,7 +44850,6 @@ payload:
   - '+.quantatw.com'
   - '+.quantiku.org'
   - '+.quantil.com'
-  - '+.quantone.com'
   - '+.quantuantuan.com'
   - '+.quantum-info.com'
   - '+.quanwai.wang'
@@ -44964,6 +44920,7 @@ payload:
   - '+.quickcep.com'
   - '+.quickddns.com'
   - '+.quickjoy.com'
+  - '+.quicklaser.com'
   - '+.quicksdk.com'
   - '+.quicksdk.net'
   - '+.quickswan.com'
@@ -45112,7 +45069,6 @@ payload:
   - '+.qwq.ren'
   - '+.qwqk.net'
   - '+.qwqoffice.com'
-  - '+.qwspcz.com'
   - '+.qwsy.com'
   - '+.qwupoq.com'
   - '+.qwxcs.com'
@@ -46626,7 +46582,6 @@ payload:
   - '+.scwsf.com'
   - '+.scwy.net'
   - '+.scxdf.com'
-  - '+.scxnyl.com'
   - '+.scxyoa.com'
   - '+.scymob.com'
   - '+.scyongqin.com'
@@ -46764,7 +46719,6 @@ payload:
   - '+.sdtxmq.com'
   - '+.sdtzfmw.com'
   - '+.sduod.com'
-  - '+.sdv8dvj.com'
   - '+.sdwdxl.com'
   - '+.sdwenlian.com'
   - '+.sdwgyy.com'
@@ -46776,6 +46730,7 @@ payload:
   - '+.sdxvisa.com'
   - '+.sdxyxhj.com'
   - '+.sdxzt.com'
+  - '+.sdyhjszp.com'
   - '+.sdyinshuachang.com'
   - '+.sdyizhibi.com'
   - '+.sdylsc.com'
@@ -46998,7 +46953,6 @@ payload:
   - '+.seosrx.net'
   - '+.seosteven.com'
   - '+.seotcs.com'
-  - '+.seowenda.net'
   - '+.seowhy.com'
   - '+.seoxiaosai.com'
   - '+.seoxuetang.com'
@@ -47110,8 +47064,8 @@ payload:
   - '+.sgzm.com'
   - '+.sh-3ai.com'
   - '+.sh-an.com'
+  - '+.sh-anrong.com'
   - '+.sh-arpm.com'
-  - '+.sh-aurora.net'
   - '+.sh-baolai.com'
   - '+.sh-deem.com'
   - '+.sh-dent.com'
@@ -48013,7 +47967,6 @@ payload:
   - '+.shubiaob.com'
   - '+.shubulo.com'
   - '+.shubuzi.com'
-  - '+.shucaiguaguo.com'
   - '+.shucaixiaoshuo.com'
   - '+.shuchongread.com'
   - '+.shuchuandata.com'
@@ -48232,7 +48185,6 @@ payload:
   - '+.shyouai.com'
   - '+.shyouth.net'
   - '+.shyrcb.com'
-  - '+.shyuanting.com'
   - '+.shyueai.com'
   - '+.shyuwl.com'
   - '+.shyuzhai.com'
@@ -49706,8 +49658,6 @@ payload:
   - '+.studencis.com'
   - '+.studentboss.com'
   - '+.studioartiz.com'
-  - '+.study-kit.com'
-  - '+.studyapi.com'
   - '+.studyez.com'
   - '+.studyfr.net'
   - '+.studyget.com'
@@ -50086,7 +50036,6 @@ payload:
   - '+.svnbucket.com'
   - '+.svnfc.com'
   - '+.svnspot.com'
-  - '+.svnur4.com'
   - '+.svw-volkswagen.com'
   - '+.svwuc.com'
   - '+.sw-bllp.com'
@@ -50185,7 +50134,6 @@ payload:
   - '+.sxhm.com'
   - '+.sxhr.net'
   - '+.sxhxbank.com'
-  - '+.sxiaoshuo.com'
   - '+.sxjagc.com'
   - '+.sxjh88.com'
   - '+.sxjhzsgc.com'
@@ -51568,7 +51516,6 @@ payload:
   - '+.tianmeng.org'
   - '+.tianmidian.com'
   - '+.tianmin789.com'
-  - '+.tianmujiqi.com'
   - '+.tianmupe.com'
   - '+.tianmupr.com'
   - '+.tiann90.com'
@@ -51895,7 +51842,6 @@ payload:
   - '+.tjstats.com'
   - '+.tjtele.com'
   - '+.tjtusuguan.com'
-  - '+.tjtzkj.com'
   - '+.tjufbase.com'
   - '+.tjupdi.com'
   - '+.tjvedu.com'
@@ -53974,7 +53920,6 @@ payload:
   - '+.vbmcms.com'
   - '+.vbooking.net'
   - '+.vbsemi.com'
-  - '+.vbsuvb.com'
   - '+.vbuluo.com'
   - '+.vbuluo99.com'
   - '+.vc800.com'
@@ -54338,7 +54283,6 @@ payload:
   - '+.vnnox.com'
   - '+.vnoke.com'
   - '+.vnsdl.com'
-  - '+.vnsiubvgs.com'
   - '+.vnvshen.com'
   - '+.vnzmi.com'
   - '+.vobao.com'
@@ -54454,7 +54398,6 @@ payload:
   - '+.vsane.com'
   - '+.vsbclub.com'
   - '+.vsbuys.com'
-  - '+.vsdhf.com'
   - '+.vsens.com'
   - '+.vshangdaili.com'
   - '+.vsharecloud.com'
@@ -54467,7 +54410,6 @@ payload:
   - '+.vsnoon.com'
   - '+.vsnoon.net'
   - '+.vsnoon.org'
-  - '+.vsnuf.com'
   - '+.vsochina.com'
   - '+.vsocloud.com'
   - '+.vsooncat.com'
@@ -55211,7 +55153,6 @@ payload:
   - '+.wechatapp.com'
   - '+.wechatify.net'
   - '+.wechatpay.com.hk'
-  - '+.wechatpen.com'
   - '+.weclassroom.com'
   - '+.wecloudx.com'
   - '+.wecom.work'
@@ -56141,7 +56082,6 @@ payload:
   - '+.win7sky.com'
   - '+.win7w.com'
   - '+.win7xzb.com'
-  - '+.win7zhuangjiyuan.com'
   - '+.win8.net'
   - '+.win866.com'
   - '+.win8china.com'
@@ -57751,7 +57691,6 @@ payload:
   - '+.xhengshui.com'
   - '+.xhg.com'
   - '+.xhgame.com'
-  - '+.xhgm100.com'
   - '+.xhgongsi.com'
   - '+.xhhd6.com'
   - '+.xhhdd.cc'
@@ -57764,7 +57703,6 @@ payload:
   - '+.xhlgfsc.com'
   - '+.xhlyjlb.com'
   - '+.xhma.com'
-  - '+.xhmzgbj.com'
   - '+.xhn888.com'
   - '+.xhnews.net'
   - '+.xhostserver.com'
@@ -57958,7 +57896,6 @@ payload:
   - '+.xiaobaipan.com'
   - '+.xiaobaishiji.com'
   - '+.xiaobaishixi.com'
-  - '+.xiaobaiss.com'
   - '+.xiaobaiupin.com'
   - '+.xiaobaivr.com'
   - '+.xiaobaixitong.com'
@@ -60325,6 +60262,7 @@ payload:
   - '+.yea.im'
   - '+.yead.net'
   - '+.yeah.net'
+  - '+.yeahexp.com'
   - '+.yeahka.com'
   - '+.yeahworld.com'
   - '+.yeai.com'
@@ -60510,7 +60448,6 @@ payload:
   - '+.yh598.com'
   - '+.yh99.cc'
   - '+.yhachina.com'
-  - '+.yhayp.com'
   - '+.yhbimg.com'
   - '+.yhcko.com'
   - '+.yhcmovie.com'
@@ -62157,7 +62094,6 @@ payload:
   - '+.yueyq.com'
   - '+.yueyu114.com'
   - '+.yueyuanzhiye.com'
-  - '+.yueyuecms.com'
   - '+.yueyues.com'
   - '+.yueyuevip.com'
   - '+.yueyuez.com'
@@ -62296,6 +62232,7 @@ payload:
   - '+.yunduocrm.com'
   - '+.yunduoke.net'
   - '+.yunduoketang.com'
+  - '+.yunduokt.net'
   - '+.yundzh.com'
   - '+.yunews.net'
   - '+.yunfabiao.com'
@@ -63146,6 +63083,7 @@ payload:
   - '+.zeyi.cc'
   - '+.zeyouquan.com'
   - '+.zeze.com'
+  - '+.zezhenwangluo.com'
   - '+.zf-8.com'
   - '+.zf3d.com'
   - '+.zfancy.net'
@@ -64793,7 +64731,6 @@ payload:
   - '+.zmfx8.com'
   - '+.zmgov.com'
   - '+.zmgrcw.com'
-  - '+.zmhkl.com'
   - '+.zmidc.com'
   - '+.zmifi.com'
   - '+.zmirrordemo.com'
@@ -65348,6 +65285,7 @@ payload:
   - '+.zx350zx.com'
   - '+.zx7b.com'
   - '+.zx98.com'
+  - '+.zx990.com'
   - '+.zxblinux.com'
   - '+.zxbzr.com'
   - '+.zxclqw.com'
@@ -65488,7 +65426,6 @@ payload:
   - '+.zywxpress.com'
   - '+.zyxr.com'
   - '+.zyxuan.org'
-  - '+.zyxzcm.com'
   - '+.zyyfy.com'
   - '+.zyz119.com'
   - '+.zyzaojiao.com'
